--- a/localisation/braz_por/MD_countries_cosmetic_l_braz_por.yml
+++ b/localisation/braz_por/MD_countries_cosmetic_l_braz_por.yml
@@ -3534,24 +3534,24 @@
  AQY_autonomy_uar_state: "Estado do Iêmen"
  AQY_autonomy_uar_province: "Província Iemenita"
  AQY_autonomy_uar_regional_command: "Comando Regional Ba'athista do Iêmen"
- ISIS_SAHEL: "Sahel Republic"
- ISIS_SAHEL_DEF: "the Sahel Republic"
- ISIS_SAHEL_ADJ: "Saharan"
- ISIS_SAHEL_fascism: "Islamic State of the Sahel"
- ISIS_SAHEL_fascism_DEF: "the Islamic State of the Sahel"
- ISIS_SAHEL_fascism_ADJ: "Saharan"
- LBA_LIBYAN_FEDERATION: "Federation of Libyan Republics"
- LBA_LIBYAN_FEDERATION_DEF: "the Federation of Libyan Republics"
- LBA_LIBYAN_FEDERATION_ADJ: "Libyan"
- LBA_KINGDOM: "Kingdom of Libya"
- LBA_KINGDOM_DEF: "the Kingdom of Libya"
- LBA_KINGDOM_ADJ: "Libyan"
- FEZ_autonomy_uar_state: "State of Fezzan"
- FEZ_autonomy_uar_province: "Fezzani Province"
- FEZ_autonomy_uar_regional_command: "Fezzani Ba'athist Regional Command"
- CYR_autonomy_uar_state: "State of Cyrenaica"
- CYR_autonomy_uar_province: "Cyrenaican Province"
- CYR_autonomy_uar_regional_command: "Cyrenaican Ba'athist Regional Command"
- TRP_autonomy_uar_state: "State of Tripolitania"
- TRP_autonomy_uar_province: "Tripolitanian Province"
- TRP_autonomy_uar_regional_command: "Tripolitanian Ba'athist Regional Command"
+ ISIS_SAHEL: "República do Sahel"
+ ISIS_SAHEL_DEF: "a República do Sahel"
+ ISIS_SAHEL_ADJ: "saariano"
+ ISIS_SAHEL_fascism: "Estado Islâmico do Sahel"
+ ISIS_SAHEL_fascism_DEF: "o Estado Islâmico do Sahel"
+ ISIS_SAHEL_fascism_ADJ: "saariano"
+ LBA_LIBYAN_FEDERATION: "Federação das Repúblicas da Líbia"
+ LBA_LIBYAN_FEDERATION_DEF: "a Federação das Repúblicas da Líbia"
+ LBA_LIBYAN_FEDERATION_ADJ: "Líbia"
+ LBA_KINGDOM: "Reino da Líbia"
+ LBA_KINGDOM_DEF: "o Reino da Líbia"
+ LBA_KINGDOM_ADJ: "Líbia"
+ FEZ_autonomy_uar_state: "Estado de Fezã"
+ FEZ_autonomy_uar_province: "Província de Fezzani"
+ FEZ_autonomy_uar_regional_command: "Comando Regional Fezzani Ba'athista"
+ CYR_autonomy_uar_state: "Estado da Cirenaica"
+ CYR_autonomy_uar_province: "Província Cirenaica"
+ CYR_autonomy_uar_regional_command: "Comando Regional Ba'athista Cirenaico"
+ TRP_autonomy_uar_state: "Estado da Tripolitânia"
+ TRP_autonomy_uar_province: "Província Tripolitana"
+ TRP_autonomy_uar_regional_command: "Comando Regional Ba'athista Tripolitano"
