--- a/localisation/braz_por/MD_decisions_l_braz_por.yml
+++ b/localisation/braz_por/MD_decisions_l_braz_por.yml
@@ -853,35 +853,35 @@
  eitan_decision: "Criar Design Eitan"
  bulat_decision: "Criar Design T-64BM2 'Bulat'"
  btr4_decision: "Criar Design BTR-4"
- promote_reduced_spending_campaigns: "Campaign for Lower Government Spending"
- promote_reduced_spending_campaigns_desc: "The government is in desperate need of cost-cutting measures but the people have a vastly different view of what the money the government receives should be used for. We can nudge the people in the right direction with a well-placed propaganda campaign."
- bohgana_decision: "Create 2C-22 Bohdana Design"
- NATO_ukraine_help: "Equipment Help For Ukraine"
- NATO_ukraine_help_desc: "Since the start of the Russo-Ukranian war, Ukraine requests equipment. While usual mechanisms are not off the charts, special NATO channels can be used to transfer equipment and support to Ukraine."
- send_money_to_ukraine: "Provide Monetary Help To Ukraine"
- send_light_equipment: "Send Light Equipment"
- send_medium_equipment: "Send Medium Equipment"
- send_heavy_equipment: "Send Heavy Equipment"
- send_mr_planes_equipment_nonbba: "Send Multirole Aircraft"
- send_strike_planes_equipment_nonbba: "Send Strike Aircraft"
- send_mr_planes_equipment_bba: "Send Multirole Aircraft"
- send_strike_planes_equipment_bba: "Send Strike Aircraft"
- order_guns_for_ukraine: "Order Infantry Equipment On Behalf Of Ukraine"
- order_cnc_for_ukraine: "Order Support Equipment On Behalf Of Ukraine"
- order_at_aa_for_ukraine: "Order AT And AA Equipment On Behalf Of Ukraine"
- order_util_for_ukraine: "Order Utility Vehicles On Behalf Of Ukraine"
- order_apc_for_ukraine: "Order APCs On Behalf Of Ukraine"
- order_ifv_for_ukraine: "Order IFVs On Behalf Of Ukraine"
- order_spart_for_ukraine: "Order SP Artillery On Behalf Of Ukraine"
- order_mbt_for_ukraine: "Order MBTs On Behalf Of Ukraine"
- discourage_population_growth_decision: "Discourage Population Growth"
- discourage_population_growth_decision_desc: "The population of our nation is getting a touch too high. We should discourage more of our population from having more children..."
- cost_hur_points_5: "HUR operational reserve: §H5§!"
+ promote_reduced_spending_campaigns: "Campanha por redução de gastos governamentais"
+ promote_reduced_spending_campaigns_desc: "O governo necessita desesperadamente de medidas de redução de custos, mas as pessoas têm uma visão muito diferente sobre como deve ser utilizado o dinheiro que o governo recebe. Podemos empurrar as pessoas na direcção certa com uma campanha de propaganda bem colocada."
+ bohgana_decision: "Criar projeto Bohdana 2C-22"
+ NATO_ukraine_help: "Ajuda em equipamentos para a Ucrânia"
+ NATO_ukraine_help_desc: "Desde o início da guerra russo-ucraniana, a Ucrânia solicita equipamentos. Embora os mecanismos habituais não sejam extraordinários, os canais especiais da OTAN podem ser usados ​​para transferir equipamento e apoio à Ucrânia."
+ send_money_to_ukraine: "Fornecer ajuda monetária à Ucrânia"
+ send_light_equipment: "Enviar equipamento leve"
+ send_medium_equipment: "Enviar Equipamento Médio"
+ send_heavy_equipment: "Enviar Equipamento Pesado"
+ send_mr_planes_equipment_nonbba: "Enviar aeronave multifuncional"
+ send_strike_planes_equipment_nonbba: "Enviar aeronave de ataque"
+ send_mr_planes_equipment_bba: "Enviar aeronave multifuncional"
+ send_strike_planes_equipment_bba: "Enviar aeronave de ataque"
+ order_guns_for_ukraine: "Encomende equipamento de infantaria em nome da Ucrânia"
+ order_cnc_for_ukraine: "Encomende equipamento de suporte em nome da Ucrânia"
+ order_at_aa_for_ukraine: "Encomende equipamentos AT e AA em nome da Ucrânia"
+ order_util_for_ukraine: "Encomende veículos utilitários em nome da Ucrânia"
+ order_apc_for_ukraine: "Encomende APCs em nome da Ucrânia"
+ order_ifv_for_ukraine: "Encomende IFVs em nome da Ucrânia"
+ order_spart_for_ukraine: "Encomende artilharia SP em nome da Ucrânia"
+ order_mbt_for_ukraine: "Encomende MBTs em nome da Ucrânia"
+ discourage_population_growth_decision: "Desencorajar o crescimento populacional"
+ discourage_population_growth_decision_desc: "A população da nossa nação está aumentando demais. Deveríamos desencorajar mais da nossa população a ter mais filhos..."
+ cost_hur_points_5: "Reserva operacional HUR:§H5§!"
  cost_hur_points_5_blocked: "HUR operational reserve: §R5§!"
- cost_hur_points_5_tooltip: "It costs 5 HUR operational reserve to take the decision"
+ cost_hur_points_5_tooltip: "Custa 5 HUR de reserva operacional para tomar a decisão"
  cost_hur_points_4: "HUR operational reserve: §H4§!"
  cost_hur_points_4_blocked: "HUR operational reserve: §R4§!"
- cost_hur_points_4_tooltip: "It costs 4 HUR operational reserve to take the decision"
+ cost_hur_points_4_tooltip: "Custa 4 HUR de reserva operacional para tomar a decisão"
  cost_hur_points_10: "HUR operational reserve: §H10§!"
  cost_hur_points_10_blocked: "HUR operational reserve: §R10§!"
- cost_hur_points_10_tooltip: "It costs 10 HUR operational reserve to take the decision"
+ cost_hur_points_10_tooltip: "Custa 10 HUR de reserva operacional para tomar a decisão"
