--- a/localisation/braz_por/MD_focus_BOS_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_BOS_l_braz_por.yml
@@ -49,7 +49,7 @@
  BOS_grant_herzegovinians_more_rights: "Aumentar o Financiamento da Polícia"
  BOS_limit_herzegovinians: "Eliminar o Dreno Financeiro da Polícia"
  BOS_bosniak_lead_goverment: "Governo Liderado por Bósnios"
- BOS_Balkan_backyard: "Yugonostalgia"
+ BOS_Balkan_backyard: "Iugonostalgia"
  BOS_Srpska_lead_goverment: "Governo Liderado por Sérvios"
  BOS_mobilize_the_nation: "Mobilizar a Nação"
  BOS_request_military_supplies: "Solicitar Suprimentos Militares"
