--- a/localisation/braz_por/MD_frontend_l_braz_por.yml
+++ b/localisation/braz_por/MD_frontend_l_braz_por.yml
@@ -163,9 +163,9 @@
  custom_diff_weak_dpr: "@DPR Enfraquecer República Popular de Donetsk"
  custom_diff_weak_lpr: "@LPR Enfraquecer República Popular de Lugansk"
  custom_diff_weak_leb: "@LEB Enfraquecer Líbano"
- VERSION_MD_LOADING: "Versão: v1.10.2"
- VERSION_MD: "Millennium Dawn: Um Dia Moderno v1.10.2"
- VERSION_MD_DATE: "Data de Lançamento: 13 de junho de 2024, 0:30 UTC/GMT\n13 de junho, 20:30 EST"
+ VERSION_MD_LOADING: "Versão: v1.10.3"
+ VERSION_MD: "Millennium Dawn: Um Dia Moderno v1.10.3"
+ VERSION_MD_DATE: "Data de Lançamento: 9 de agostode 2024, 0:30 UTC/GMT\n8 de agosto, 20:30 EST"
  MENU_MD_WIKI: "Encontre informações úteis sobre Millennium Dawn: Um Dia Moderno no Wiki do Gitlab!"
  MENU_STEAMWORKSHOP: "Deixe-nos uma avaliação no Steam Workshop"
  MENU_DISCORD: "Encontre outros jogadores e converse com os desenvolvedores no Discord"
