--- a/localisation/braz_por/MD_scripted_diplomatic_actions_l_braz_por.yml
+++ b/localisation/braz_por/MD_scripted_diplomatic_actions_l_braz_por.yml
@@ -3,7 +3,7 @@
  RECALL_VOLUNTEERS_ACTION_DESC: "A qualquer momento, podemos escolher recolher nossa força de intervenção."
  RECALL_VOLUNTEERS_TOOLTIP: "§Y[This.GetNameWithFlag]§! §Rdeve ter forças de intervenção ativas nossas que podemos retirar.§!"
  RECALL_VOLUNTEERS_TOOLTIP_G: "§Y[This.GetNameWithFlag]§! deve ter forças de intervenção ativas nossas que podemos retirar."
- RECALL_VOLUNTEERS_SEND_DESC: "A luta em que §Y[This.GetNameWithFlag]§! se encontra não é mais a nossa luta. É hora de retirarmos nossas forças do conflito.\n\n§YEsta ação retirará nossas Forças de Intervenção de §Y[This.GetNameWithFlag]§!"
+ RECALL_VOLUNTEERS_SEND_DESC: "The fight §Y[This.GetNameWithFlag]§! finds herself in is no longer our fight. It is time we withdraw our forces from the conflict.\n\n§YThis action will withdraw our Intervention Forces from [This.GetNameWithFlag]§!"
  base_trade_condition: "Relutância Base Contra §YAcordo Comercial§!"
  base_mutual_investment_treaty_condition: "Relutância Base Contra §YTratado de Investimento Mútuo§!"
  base_assume_debt_condition: "Relutância Base Contra §YAssunção de Dívida§!"
