--- a/localisation/braz_por/replace/replaced_from_focus_filter_tag_l_braz_por.yml
+++ b/localisation/braz_por/replace/replaced_from_focus_filter_tag_l_braz_por.yml
@@ -95,14 +95,19 @@
  FOCUS_FILTER_ARMY_XP: "Experiência do Exército"
  FOCUS_FILTER_NAVY_XP: "Experiência da Marinha"
  FOCUS_FILTER_AIR_XP: "Experiência Aérea"
- FOCUS_FILTER_UKRAINE_VITRENKO: "Vitrenko's party"
- FOCUS_FILTER_UKRAINE_SECURITY: "Security of Ukraine"
- FOCUS_FILTER_UKRAINE_NAZIKI: "The Nationalist Congress"
- FOCUS_FILTER_UKRAINE_SOCIALISTS: "The Socialists"
- FOCUS_FILTER_UKRAINE_YUSHENKO: "Yushchenko's Party"
- FOCUS_FILTER_UKRAINE_VSU: "The Armed Forces of Ukraine"
- FOCUS_FILTER_UKRAINE_KOMMI: "The Communists"
+ FOCUS_FILTER_UKRAINE_VITRENKO: "Festa de Vitrenko"
+ FOCUS_FILTER_UKRAINE_SECURITY: "Segurança da Ucrânia"
+ FOCUS_FILTER_UKRAINE_NAZIKI: "O Congresso Nacionalista"
+ FOCUS_FILTER_UKRAINE_SOCIALISTS: "Os Socialistas"
+ FOCUS_FILTER_UKRAINE_YUSHENKO: "Partido de Yushchenko"
+ FOCUS_FILTER_UKRAINE_VSU: "As Forças Armadas da Ucrânia"
+ FOCUS_FILTER_UKRAINE_KOMMI: "Os comunistas"
  FOCUS_FILTER_UKRAINE_KUCHMA: "Kuchma"
- FOCUS_FILTER_UKRAINE_REGIONS: "The Party of Regions"
- FOCUS_FILTER_UKRAINE_SERVANT: "Servant of People"
- FOCUS_FILTER_UKRAINE_POROH: "European Solidarity"
+ FOCUS_FILTER_UKRAINE_REGIONS: "O Partido das Regiões"
+ FOCUS_FILTER_UKRAINE_SERVANT: "Servo do Povo"
+ FOCUS_FILTER_UKRAINE_POROH: "Solidariedade Europeia"
+ FOCUS_FILTER_ISRFOREIGNPOL: "Política Externa de Israel"
+ FOCUS_FILTER_ISRMILITARY: "Tzahal-IDF"
+ FOCUS_FILTER_ISRPALSTUFF: "Israel-Palestina"
+ FOCUS_FILTER_ISRPOLICE: "Polícia de Israel"
+ FOCUS_FILTER_ISRECON: "Economia Israelense"
