--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1314,7 +1314,7 @@
  UKR_up_pro_union_state_partiess: "[union_state_flag_sov_or_ukr]§YSupport§! Pro-union Parties"
  UKR_up_pro_union_state_partiess_desc: "Pro-union parties should have decisive power in the candidate countries, so we will strengthen their influence"
  UKR_reunite_with_ukraine: "[UKR.GetFlag]§YReunite§! with §Y[UKR.GetNameWithFlag]§!"
- UKR_reunite_with_ukraine_desc: "Ukraine is our brother nation. We have taken multiple steps to integrat with each other, now it's time for the final stroke."
+ UKR_reunite_with_ukraine_desc: "Ukraine is our brother nation. We have taken multiple steps to integrate with each other, now it's time for the final stroke."
  UKR_create_union_state: "[SOV.GetFlag]§YFinal Stage§! of Integration"
  UKR_create_union_state_desc: "Now we have finally become a Union State, such as it was conceived as a result of repeated renegotiation of agreements"
  UKR_sozdat_union_states: "[UKR.GetFlag]§YCreate§! a Union State By §RForce§!"
