--- a/localisation/english/MD_focus_CHE_l_english.yml
+++ b/localisation/english/MD_focus_CHE_l_english.yml
@@ -45,7 +45,7 @@
  CHE_cult_ramzan_desc: "Our President should not just be a person holding his position, he should be a symbol of the republic!"
  CHE_adam_kadyrov: "Promote Our Son"
  CHE_adam_kadyrov_desc: "Our Son, Adam, will become the head of the security service, and we will also present him with certain awards for his services"
- CHE_electro_pult: ""Electropult" Plant""
+ CHE_electro_pult: ""Electropult" Plant"
  CHE_electro_pult_desc: "Cooperation with the St. Petersburg enterprise allowed us to open production on the territory of our republic"
  CHE_russian_university_spetsnaz: "Found the Russian University of Special Forces"
  CHE_russian_university_spetsnaz_desc: "The Russian University of Special Forces is the first and currently the only private educational institution in the Russian Federation to provide professional training for special units"
