--- a/localisation/french/MD_focus_BRA_l_french.yml
+++ b/localisation/french/MD_focus_BRA_l_french.yml
@@ -487,8 +487,8 @@
  BRA_new_communist_goverment_desc: "Pour assurer la stabilité de la nation, le gouvernement doit être stable !"
  BRA_five_year_plan: "Plans quinquennaux"
  BRA_five_year_plan_desc: "Les modèles économiques libres des États occidentaux ne constituent pas l’avenir d’un État socialiste. Le retour à une économie planifiée, de préférence sous la forme de plans quinquennaux classiques de style soviétique, donnera au gouvernement une influence illimitée sur une économie auparavant incontrôlée."
- BRA_the_corruption_question: "End Corruption"
- BRA_the_corruption_question_desc: "Main socialists leaders of the past, like Lula, were very corrupt. We shouldn't make the same mistakes."
+ BRA_the_corruption_question: "Mettre fin à la corruption"
+ BRA_the_corruption_question_desc: "Les principaux dirigeants socialistes du passé, comme Lula, étaient très corrompus. Nous ne devrions pas commettre les mêmes erreurs."
  BRA_empower_the_government: "Empower the Government"
  BRA_empower_the_government_desc: "Although fighting corruption is a good thing, we should gain some benefits from exploiting it too."
  BRA_better_sus: "Improve the SUS"
