--- a/localisation/french/MD_focus_CHE_l_french.yml
+++ b/localisation/french/MD_focus_CHE_l_french.yml
@@ -36,13 +36,13 @@
  CHE_invite_international_students_desc: "Notre université est prête à accepter des professeurs d'autres pays"
  CHE_special_motorized_regiment: "Régiment Spécial Motorisé"
  CHE_special_motorized_regiment_desc: "141e Régiment motorisé spécial du nom de A. A. Kadyrov, basé sur le bataillon motorisé spécial \"Nord\""
- CHE_battalion_vostok: "Battalion \"Vostok\""
- CHE_battalion_vostok_desc: "Special purpose battalion (spetsnaz) of the GRU as part of the 291st Guards Motorized Rifle Regiment of the 42nd Guards Motorized Rifle Division, formed mainly from Chechens"
+ CHE_battalion_vostok: "Bataillon \"Vostok\""
+ CHE_battalion_vostok_desc: "Bataillon spécial (spetsnaz) du GRU faisant partie du 291e régiment de fusiliers motorisés de la 42e division de fusiliers motorisés de la garde, formé principalement de Tchétchènes"
  CHE_cult_ramzan: "Le culte de Ramzan Kadyrov"
  CHE_cult_ramzan_desc: "Notre Président ne doit pas seulement être une personne occupant son poste, il doit être un symbole de la république !"
  CHE_adam_kadyrov: "Promouvez notre fils"
  CHE_adam_kadyrov_desc: "Notre Fils Adam deviendra le chef du service de sécurité et nous lui remettrons également certaines récompenses pour ses services."
- CHE_electro_pult: "\"Electropult\" Plant\""
+ CHE_electro_pult: "Usine \"Electropulte\""
  CHE_electro_pult_desc: "La coopération avec l'entreprise de Saint-Pétersbourg nous a permis d'ouvrir la production sur le territoire de notre république"
  CHE_russian_university_spetsnaz: "J'ai fondé l'Université russe des forces spéciales"
  CHE_russian_university_spetsnaz_desc: "L'Université russe des forces spéciales est le premier et actuellement le seul établissement d'enseignement privé de la Fédération de Russie à proposer une formation professionnelle aux unités spéciales."
@@ -50,26 +50,26 @@
  CHE_grozni_city_desc: "La ville de Grozny est un complexe de gratte-ciel de Grozny, situé dans le centre-ville, le long de l'avenue Akhmat Kadyrov, sur les rives de la rivière Sunzha."
  CHE_chechen_neftehim: "Tchétchenneftekhimprom"
  CHE_chechen_neftehim_desc: "Chechenneftekhimprom Joint Stock Company est une société engagée dans la gestion de l'utilisation du sous-sol de la République tchétchène. En plus du travail économique et administratif, la société est engagée dans la recherche et l'attraction d'investissements dans l'industrie pétrolière de la République tchétchène, améliorant ainsi les mécanismes de production et de développement des gisements pétroliers, l'exploration géologique du sous-sol et l'exploration de nouvelles réserves d'hydrocarbures."
- CHE_continue_investing_medicine: "Continue The Development of Medicine"
- CHE_continue_investing_medicine_desc: "We will continue to invest in the development of medicine in our republic"
- CHE_diplomacy: "Foreign Policy"
- CHE_diplomacy_desc: "It's time for us to enter the international arena and pursue a policy that is beneficial both for us and for Russia"
- CHE_palestine: "Recognition of Palestine"
- CHE_palestine_desc: "We recognize the independence of Palestine and express dissatisfaction with Israel's policy in the region"
- CHE_saudi: "Friendship with Saudi Arabia"
- CHE_saudi_desc: "We are ready to establish a dialogue with the Saudis, because this will open a large window of opportunity for us in the Muslim world"
+ CHE_continue_investing_medicine: "Poursuivre le développement de la médecine"
+ CHE_continue_investing_medicine_desc: "Nous continuerons à investir dans le développement de la médecine dans notre république"
+ CHE_diplomacy: "Police étrangère"
+ CHE_diplomacy_desc: "Il est temps pour nous d'entrer sur la scène internationale et de mener une politique qui soit bénéfique à la fois pour nous et pour la Russie."
+ CHE_palestine: "Reconnaissance de la Palestine"
+ CHE_palestine_desc: "Nous reconnaissons l'indépendance de la Palestine et exprimons notre mécontentement à l'égard de la politique d'Israël dans la région"
+ CHE_saudi: "Amitié avec l'Arabie Saoudite"
+ CHE_saudi_desc: "Nous sommes prêts à établir un dialogue avec les Saoudiens, car cela nous ouvrira une grande fenêtre d'opportunité dans le monde musulman."
  CHE_terek: "SOBR Terek"
- CHE_terek_desc: "Another Chechen battalion was formed"
- CHE_sever: "Battalion \"Sever\""
- CHE_sever_desc: "Another Chechen battalion was formed"
- CHE_yug: "Battalion \"Yug\""
- CHE_yug_desc: "Another Chechen battalion was formed"
- CHE_intervence: "Chechen Volunteers"
- CHE_intervence_desc: "Our brave warriors are ready to defend the interests of Chechnya and Russia around the globe"
+ CHE_terek_desc: "Un autre bataillon tchétchène a été formé"
+ CHE_sever: "Bataillon \"Sever\""
+ CHE_sever_desc: "Un autre bataillon tchétchène a été formé"
+ CHE_yug: "Bataillon \"Yug\""
+ CHE_yug_desc: "Un autre bataillon tchétchène a été formé"
+ CHE_intervence: "Volontaires tchétchènes"
+ CHE_intervence_desc: "Nos courageux guerriers sont prêts à défendre les intérêts de la Tchétchénie et de la Russie dans le monde entier"
  CHE_Grozneftegaz: "Grozneftegaz"
- CHE_Grozneftegaz_desc: "JSC \"Grozneftegaz\" is an oil and gas producing enterprise of the Company operating in the North Caucasus Federal District of Russia."
- CHE_syria: "Syrian Partners"
- CHE_syria_desc: "We understand the importance of Syria for us and for Russia, so we are ready to establish contacts with them"
+ CHE_Grozneftegaz_desc: "JSC \"Grozneftegaz\" est une entreprise de production de pétrole et de gaz de la société opérant dans le district fédéral du Caucase du Nord en Russie."
+ CHE_syria: "Partenaires syriens"
+ CHE_syria_desc: "Nous comprenons l'importance de la Syrie pour nous et pour la Russie, c'est pourquoi nous sommes prêts à établir des contacts avec eux"
  CHE_continue_fight_terrorists: "Fight Against the Ichkeri"
  CHE_continue_fight_terrorists_desc: "We will continue to fight terrorists on our land"
  CHE_ingushetia: "Conflict with Ingushetia"
