--- a/localisation/french/MD_focus_CUB_l_french.yml
+++ b/localisation/french/MD_focus_CUB_l_french.yml
@@ -103,8 +103,8 @@
  cuba.18.a: "Super!"
  cuba.19: "Venezuela did not agree"
  cuba.19.t: "Venezuela did not agree"
- cuba.19.d: "They rejected our offer, in their opinion, it is not profitable for them"
- cuba.19.a: "Sad."
+ cuba.19.d: "Ils ont rejeté notre offre, à leur avis, ce n'est pas rentable pour eux"
+ cuba.19.a: "Triste"
  cuba_news.24: "Cuba has become an observer country at the EAEU"
  cuba_news.24.t: "Cuba has become an observer country at the EAEU"
  cuba_news.24.d: "The EAEU countries approved the granting of observer status to Cuba at the EAEU"
