--- a/localisation/french/MD_focus_DEN_l_french.yml
+++ b/localisation/french/MD_focus_DEN_l_french.yml
@@ -9,7 +9,7 @@
  DEN_infantry_equipment_models_1: "New Infantry Equipment Models"
  DEN_infantry_equipment_models_1_desc: "Our army has been lacking funding for decades and large amounts of it is stuck with ancient equipment. We need to rectify this sad fact immediately!"
  DEN_land_doctrine_1_desc: "As a small country, our tactics have always revolved around being smarter, if not outright stronger, than our opponents. Army doctrines are incredibly important for the overall effectiveness of our military encounters."
- DEN_foreign_advisors: "Foreign Advisors"
+ DEN_foreign_advisors: "Conseillers étrangers"
  DEN_foreign_advisors_desc: "The art of war is changing and we must change with it."
  DEN_close_Frederiksberg_Have: "Close Down Frederiksberg Have"
  DEN_close_Frederiksberg_Have_desc: "The Royal Danish Military Academy is situated in Frederiksberg Castle next to the vast natural beauty of Frederiksberg Garden. If we close the Garden off from the public, the resulting expanded training areas vastly improve the effectiveness of the Academy. Of course, this will probably be protested by the public, but isn't the integrity of our nation's military more important than a few angry joggers?"
