--- a/localisation/french/MD_focus_ETH_l_french.yml
+++ b/localisation/french/MD_focus_ETH_l_french.yml
@@ -197,7 +197,7 @@
  ETH_stabilize_the_food_supply_TT: "§YThe famine may get worse if you don't stabilize the food supply soon enough.§!\n"
  ETH_ERI_acceptance_100_TT: "Acceptance of §HIntegration§! is §G100%§!"
  ETH_ERI_federalisation_100_TT: "Acceptance of §HFederalisation§! is §G100%§!"
- ETH_eritrea_federal_parties_allowed_TT: "Will permit §Y[ERI.GetNameWithFlag]§! to manage their own affairs and electoral processes whilst maintaining §Y[ETH.GetNameWithFlag]§!'s control over the region.\n\nLocal elections are scheduled within the next few weeks."
+ ETH_eritrea_federal_parties_allowed_TT: "Permettra §Y[ERI.GetNameWithFlag]§! gérer leurs propres affaires et processus électoraux tout en maintenant le contrôle de §Y[ETH.GetNameWithFlag]§! sur la région.\n\nDes élections locales sont prévues dans les prochaines semaines."
  ETH_eritrea_locked_TT: "§REffects of this focus are not known until choosing the fate of Eritrea!§!"
  ETH_annexation_support_TT: "Integration Process is at §G100%§!"
  ETH_eritrean_federal_acceptance_TT: "Federalisation Process is at §G100%§!"
@@ -278,8 +278,8 @@
  ethiopia.21.d: "After months of gridlock, the enemy has finally broken through our lines and invaded our lands proper. Perhaps we should agree to the peace framework that the Organization of African Unity laid down in 1998 and suggest a ceasefire?"
  ethiopia.21.a: "Peace is the only option"
  ethiopia.21.b: "War is the only option"
- ethiopia.22.t: "[FROM.GetName] Proposes Ceasefire"
- ethiopia.22.d: "After our forces broke through the enemy lines, we were contacted by [FROM.GetAdjective] government, stating that they agree to the Organization of African Unity peace framework. They are proposing an immediate ceasefire"
+ ethiopia.22.t: "[FROM.GetName] propose un cessez-le-feu"
+ ethiopia.22.d: "Après que nos forces ont franchi les lignes ennemies, nous avons été contactés par le gouvernement [FROM.GetAdjective], déclarant qu'il acceptait le cadre de paix de l'Organisation de l'unité africaine. Ils proposent un cessez-le-feu immédiat"
  ethiopia.22.a: "Finally! Victory!"
  ethiopia.22.b: "We won't stop until they kneel before us!"
  ethiopia.23.t: "Trials of The Eritrean Deputies"
