--- a/localisation/french/MD_focus_EU_l_french.yml
+++ b/localisation/french/MD_focus_EU_l_french.yml
@@ -37,8 +37,8 @@
  EU_adjust_omt_text: "Ajuster l'OMT"
  EU_start_omt_text: "Démarrer l'OMT"
  EU_if_has_active_omt: "L'IF a une OMT active :"
- EU_potential: "[From.GetNameDefCap] [From.GetFlag] est un membre potentiel de l'UE"
- EU_candidate: "[From.GetNameDefCap] [From.GetFlag] est un candidat à l'UE"
+ EU_potential: "[ROOT.GetNamewithFlag] est un membre potentiel de l'UE"
+ EU_candidate: "[ROOT.GetNamewithFlag] est un membre candidat à l'UE"
  european_constitution: "Constitution européenne"
  treaty_of_lisbon: "Traité de Lisbonne"
  EU_UNSC: "Siège de l'UE au Conseil de sécurité des Nations unies"
@@ -49,7 +49,7 @@
  EU_budget_category_tt: "GDP of the European Union: [?global.EU_gdp|§Y0] billion\nGDP/C: [?global.EU_gdp_capita|§Y]k\n\n§YMultiannual Financial Framework:§!\nDraft: [EU_mff_draft] [draft_status_EU_mff]\nTotal invested PP: [?global.EU_mff_draft_invested_PP|§Y0]\nTotal: [?global.EU_mff_total|§G2] billion\nper year:\nEU budget GDP-based call rate: [?global.EU_budget_call_rate|§C2]§C%§! \nEU annual total budget: [?global.EU_total_budget|§G2] billion\n[EU_contribution_member_states]\n\n§YBudget of the next fiscal year:§!\nDraft: [EU_budget_draft] [draft_status_EU_budget]\nTotal invested PP: [?global.EU_budget_draft_invested_PP|§Y0]\n\nExpenditure: [?global.EU_total_exp|§G2] billion\nCategory - Total - Ratio\n§OGrowth§!: [?global.EU_growth_exp_total|§Y0] billion - [?global.EU_growth_exp_ratio|§O%2]\n§GNatural resources§!: [?global.EU_natural_exp_total|§Y0] billion - [?global.EU_natural_exp_ratio|§G%2]\n§LGlobal Europe§!: [?global.EU_global_exp_total|§Y0] billion - [?global.EU_global_exp_ratio|§L%2]\n§gAdministration, security and citizenship§!: [?global.EU_admin_exp_total|§Y0] billion - [?global.EU_admin_exp_ratio|§g%2]\n[EU_distribution_member_states]\n"
  eu_gui_tooltip: "Interface de l'§C[EUU.GetNameWithFlag]§!"
  eu_gui_tooltip_delayed: "Ouvre l'écran qui contient toutes les informations sur §C[EUU.GetNameWithFlag]§! y compris le Parlement européen, les titulaires de charges de l'Union européenne, le Conseil de l'Union européenne et le budget européen."
- fiscal_button_title: "EU Budget"
+ fiscal_button_title: "Budget de l'UE"
  fiscal_button_desc: "The budget of §C[EUU.GetNameWithFlag]§!. The screen handles everything that includes the Multiannual Financial Framework and the budget of the next fiscal year."
  euro_voting_button_title: "Vote du Conseil"
  euro_voting_button_desc: "The Council of the European Union is the second legislative body of §C[EUU.GetNameWithFlag]§! in Millennium Dawn. The Council of the European Union represents the member states in the legislative procedure. All of the currently passed legislation, drafted legislation, and the list of the voting members of §C[EUU.GetNameWithFlag]§!.\n\nThe Council of the European Union operates on Qualified Majority Voting (QMV) commonly known as double majority. It requires 55% of the §CMember States§! and 65% §CMember States§! of the European Union Population."
@@ -57,7 +57,7 @@
  parliament_button_desc: "The European Parliament is the first legislative body of §C[EUU.GetNameWithFlag]§! in Millennium Dawn. The European Parliament is the first place laws can be put up for vote to become legal acts of the European Union.\n\nThe player will have 14 days to complete the mission (refer to decisions) by gathering the majority support of the Members of the European Parliament (MEPs). Once the law is passed it is then passed to the Council of the European Union."
  EU_europeanism_screen_title: "Euro-Info"
  EU_europeanism_screen_desc: "The Euro-Info tab contains information about the European Union such as the member states, their population, the ratio of their pop, Euroscepticism and Europeanism values of the European Union."
- EU_offices_screen_title: "Offices"
+ EU_offices_screen_title: "Bureaux"
  EU_offices_screen_desc: "The Offices of §C[EUU.GetNameWithFlag]§!. The offices of §C[EUU.GetNameWithFlag]§! are the set of positions that can be held by a European Union member state."
  eu_sec_general_euro_navy_tip: "§YPrérequis :§!\n[!eu_sec_general_euro_navy_back_click_enabled]"
  eu_sec_general_euro_army_tip: "§YPrérequis :§!\n[!eu_sec_general_euro_army_back_click_enabled]"
@@ -94,7 +94,7 @@
  budget_next_year_header: "§YBudget du prochain exercice financier§!"
  next_year_draft_loc_tt: "Rédiger：[EU_budget_draft][draft_status_EU_budget]"
  next_year_pp_loc_tt: "Total Invested PP: [?global.EU_budget_draft_invested_PP|§Y0]"
- expenditure_total_loc_text: "Total Expenses: [?global.EU_total_exp|§R2] Billion"
+ expenditure_total_loc_text: "Dépenses totales: [?global.EU_total_exp|§R2] Milliards"
  expenditure_total_loc_tt: "Category - Total - Ratio\n§OGrowth§!: [?global.EU_growth_exp_total|§Y0] billion - [?global.EU_growth_exp_ratio|§O%2]\n§GNatural resources§!: [?global.EU_natural_exp_total|§Y0] billion - [?global.EU_natural_exp_ratio|§G%2]\n§LGlobal Europe§!: [?global.EU_global_exp_total|§Y0] billion - [?global.EU_global_exp_ratio|§L%2]\n§gAdministration, security and citizenship§!: [?global.EU_admin_exp_total|§Y0] billion - [?global.EU_admin_exp_ratio|§g%2]"
  expenditure_total_loc_delayed_tt: "[EU_distribution_member_states]"
  multiannual_financial_framework_header: "§YMultiannual Financial Framework§!"
