--- a/localisation/french/MD_focus_NOR_l_french.yml
+++ b/localisation/french/MD_focus_NOR_l_french.yml
@@ -224,7 +224,7 @@
  norway.4.d: "Following a negotiation with the British Parliament, Norway is now joining the British Oil Production Treaty, which now allows Norway to produce oil in the North Sea."
  norway.4.o1: "Time to get this Black Gold!"
  norway.5.t: "[NOR.GetName] Proposes Oil Possible Investments"
- norway.5.d: "Norwegian delegation has contacted our diplomats and are proposing a possible oil deal within their nation. We can invest into their nation to get a better stake in their oil shares, and some influence in their state."
+ norway.5.d: "La délégation norvégienne a contacté nos diplomates et propose un éventuel accord pétrolier au sein de leur pays. Nous pouvons investir dans leur pays pour obtenir une meilleure participation dans leurs actions pétrolières et une certaine influence dans leur État."
  norway.5.a: "Sounds like a Great Plan"
  norway.5.b: "No"
  norway.6.t: "[FROM.GetName] Agrees to Invest!"
