--- a/localisation/french/MD_focus_PER_l_french.yml
+++ b/localisation/french/MD_focus_PER_l_french.yml
@@ -4,7 +4,7 @@
  PER_the_third_development_plan: "Le troisième plan de développement"
  PER_the_third_development_plan_desc: "Le troisième plan de développement (post-révolution) comprenait des mesures et des actions visant à restructurer l'économie iranienne dominée par l'État vers un système de marché orienté vers le monde, ainsi que des mesures traitant des politiques intérieures et étrangères, de la sécurité nationale et des efforts culturels. Cependant, c'est trop de choses à réaliser de manière réaliste en 5 ans, nous devons donc nous concentrer sur la partie du plan à réaliser."
  PER_IMIDRO: "IMIDRO"
- PER_IMIDRO_desc: "Iranian Mines & Mining Industries Development & Renovation Organization, known as IMIDRO, is a state-owned holding company active in the Iranian mining sector. IMIDRO has companies in the field of steel, copper, cement and minerals industries."
+ PER_IMIDRO_desc: "L'Organisation iranienne de développement et de rénovation des mines et des industries minières, connue sous le nom d'IMIDRO, est une société holding publique active dans le secteur minier iranien. IMIDRO possède des entreprises dans le domaine des industries de l'acier, du cuivre, du ciment et des minéraux."
  PER_IMIDRO_REMOVE_TT: "§RRemoves§! §YIMIDRO§!."
  PER_priority_khuzestan: "Priority §YKhuzestan§!"
  PER_priority_khuzestan_desc: "We will prioritize Khuzestan for the development and modernization of mines. This will further increase our trade relations with other countries."
