--- a/localisation/french/MD_focus_TUR_l_french.yml
+++ b/localisation/french/MD_focus_TUR_l_french.yml
@@ -1,11 +1,11 @@
 ﻿l_french:
  turkey_focus: "Priorités nationales turc"
- TUR_APC_TECH: "APC Technology"
- TUR_industry: "Industrial Technology"
- TUR_AFV_TECH: "AFV Technology"
- TUR_TECH_ELECTRONICS: "Electronics"
+ TUR_APC_TECH: "Technologie APC"
+ TUR_industry: "Technologie industrielle"
+ TUR_AFV_TECH: "Technologie AFV"
+ TUR_TECH_ELECTRONICS: "Électronique"
  TUR_TECH_INTERNET: "Internet"
- TUR_new_mili_rd: "New Military Technology"
+ TUR_new_mili_rd: "Nouvelle technologie militaire"
  TUR_digitalize: "Digitalization"
  TUR_modernize_armed_forces: "Modernized Armed Forces"
  ALB_taken_research: "Taken Research"
