--- a/localisation/french/MD_focus_UKR_l_french.yml
+++ b/localisation/french/MD_focus_UKR_l_french.yml
@@ -5,7 +5,7 @@
  UKR_chernobyl_effects_tooltip: "§Rfurther radiation leaks could cause long term damages§!"
  UKR_found_the_uop: "Reforming The Military-Industrial Complex"
  UKR_found_the_uop_desc: "Our defense industry is in a deplorable state, so we are forced to begin a global reform in this area."
- UKR_ukrainian_armed_forces_reform: "Reform of the Armed Forces"
+ UKR_ukrainian_armed_forces_reform: "Industrialisation ukrainienne"
  UKR_ukrainian_armed_forces_reform_desc: "Our armed forces urgently need reform, it is necessary to create new structures, new types of troops and solve the old problems of our army"
  UKR_srdsc: "State Research and Design Shipbuilding Center"
  UKR_srdsc_desc: "State Research and Design Shipbuilding Center is a design bureau specializing in shipbuilding and located in Mykolaiv, Ukraine. It is part of the Ukrainian Defense Industries state corporation."
@@ -15,17 +15,17 @@
  UKR_revive_the_black_sea_fleet_desc: "Our Black Sea Fleet literally did not exist, but now we must deal with its revival in order to consolidate our power in the Black Sea."
  UKR_cut_down_the_general_staff: "Reduce The Number of Generals"
  UKR_cut_down_the_general_staff_desc: "Too many generals negatively affect our army, it's time to fix it"
- UKR_contract_army: "Military Education Reform"
+ UKR_contract_army: "Armée professionnelle"
  UKR_contract_army_desc: "We will reorganize the old military universities, as well as create new ones to improve the quality of our armed forces"
  UKR_war_on_donbass_experience: "Our Army"
  UKR_war_on_donbass_experience_desc: "The Ukrainian Army is literally a shadow of the former Soviet and now Russian - it's time to change that"
  UKR_support_uia: "UIA"
  UKR_support_uia_desc: "UIA or Ukrainian International Airlines is the flagship and largest airline present in Ukraine. The main hub for its airliners is in Kyiv's Boryspil International Airport. It operates passenger flights and cargo services to Europe, the Middle East, the United States, Canada, and Asia."
- UKR_build_new_airports: "Build New Airports"
+ UKR_build_new_airports: "Construire de nouveaux aéroports"
  UKR_build_new_airports_desc: "Our airports have been neglected for far too long. We need to invest in our airports for both civilian purposes as well as military purposes."
- UKR_grants_for_high_speed_trains: "Grants for High-Speed Trains"
+ UKR_grants_for_high_speed_trains: "Fonds pour les Trains à Haute Vitesse"
  UKR_grants_for_high_speed_trains_desc: "The rail network is extremely important to the economic prosperity of Ukraine. It is important to upgrade from our older systems to newer higher-speed trains. It is highly worthwhile to invest in the expansion of our trains as we have one of the largest rail networks in all of Europe."
- UKR_invest_in_ministry_of_infrastructure: "Ministry of Infrastructure"
+ UKR_invest_in_ministry_of_infrastructure: "Ministère de l'infrastructure"
  UKR_invest_in_ministry_of_infrastructure_desc: "The Ministry of Infrastructure has taken some flak. Ukraine's infrastructure is collapsing due to corrupt officials in the Ministry siphoning funds. People are unable to drive on some roads due to conditions. It is time to redraw the Ministry in hopes of a better future for our industries."
  UKR_samru: "SAMRU Investments"
  UKR_samru_desc: "Some infrastructure companies in Ukraine are running out of funds and general work. State Agency of Automobile Roads of Ukraine is one such company, and we should push to give them work and improve some roads in our country."
@@ -33,9 +33,9 @@
  UKR_roads_extend_plan_desc: "Roads in Ukraine are not the best in the world. Some areas are still relying on unpaved or nearly destroyed roads. It is about time these regions got a bit of love."
  UKR_ukrainian_railways: "UZ"
  UKR_ukrainian_railways_desc: "UZ is the name of the state-owned company that currently possess a massive monopoly on the majority of the Ukrainian railroad transportation within the country. The company boasts an impressive combined total track length of over 23,000km worth of track, marking it as the 13th largest in the world. It is also the 6th largest rail passenger transporter and 7th largest freight transporter."
- UKR_hyperloop_project: "Hyperloop Project"
+ UKR_hyperloop_project: "Projet Hypreloop"
  UKR_hyperloop_project_desc: "The 'Hyperloop Project' is a concept developed by businessmen Elon Musk and his companies SpaceX and Tesla in an ongoing project to develop a more efficient system of transportation for global consumption. Ukraine is a large and vast country. Therefore, it would be worth looking into to expand and develop our version of the hyperloop."
- UKR_legacy_of_the_ukr_ind: "Ukrainian Industrialization"
+ UKR_legacy_of_the_ukr_ind: "Industrialisation ukrainienne"
  UKR_legacy_of_the_ukr_ind_desc: "Ukraine relies heavily on its industrial base for its economic growth. The major cities of Kyiv, Lviv, and Zaporizhia all contain some form of industry that has driven their growth throughout the years. We must keep this trend or else we stagnant."
  UKR_ssau: "SSAU"
  UKR_ssau_desc: "The Ukrainian space industry is far from being a world leader in space technology. However, it is a large producer of spacecraft and other extraterrestrial machinery. The ability to keep competitive in this last frontier will dictate our future in the coming years."
@@ -46,9 +46,9 @@
  UKR_naftogaz: "Naftogaz"
  UKR_naftogaz_desc: "Naftogaz is the state-owned oil and natural gas company. It is involved in the process of extraction to the refinement of the products. The company is often used to push for oil and gas independence against countries like Russia or other major energy exporters."
  UKR_extend_ukrainian_refineries: "Focus on Renewable Energy"
- UKR_extend_ukrainian_refineries_desc: "Although we have ample access to natural gas and other oil reserves, padding our current energy needs with other forms of energy will help stabilize in times of low fossil fuel production."
+ UKR_extend_ukrainian_refineries_desc: "Malgré notre large accès au gaz naturel et autres réserves de pétrole, remplir les besoins énergétiques actuels avec d'autres formes d'énergies nous aidera à stabiliser en des temps de faible production d'énergies fossiles."
  UKR_zalk: "Zaporizhia Industrial Plants"
- UKR_zalk_desc: "Zaporizhia is an important industrial center in Ukraine. It is the capital of the Zaporizhia Oblast, home to ZAZ, and it is a hub for metallurgy and a major port city for the shipment of goods from the Donbas."
+ UKR_zalk_desc: "Zaporijjia est un centre industriel important en Ukraine. C'est la capitale de l'oblast de Zaporijjia, abritant l'entreprise ZAZ, c'est aussi un hub de la métallurgie et une ville portuaire majeure pour la livraison de biens du Donbas."
  UKR_laz: "LAZ"
  UKR_laz_desc: "LAZ Holding company has a subsidiary factory in Lviv, Ukraine that specializes in the production of buses. The company recently fell on some hard times due to the collapse of the Soviet Union nine years prior. We could use this as an opportunity to help boost the region and its marketability."
  UKR_zaz: "ZAZ"
