--- a/localisation/french/MD_game_rules_l_french.yml
+++ b/localisation/french/MD_game_rules_l_french.yml
@@ -617,7 +617,7 @@
  UKR_YUSHENKO_DESC: "Ukraine will follow the path of Yushchenko's Presidency"
  UKR_YANUK: "Yanukovych"
  UKR_YANUK_DESC: "Ukraine will follow the path of Yanukovych's Presidency"
- RULE_ALLOW_RELEASE_NATIONS_UKRAINE_FEDERALIZE_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless until you §Yfederalize§! Ukraine"
+ RULE_ALLOW_RELEASE_NATIONS_UKRAINE_FEDERALIZE_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! vous ne pourrez libérer ce pays que si vous §Yfédéralisez§! Ukraine"
  LBA_AI_BEHAVIOR: "@LBA Libya"
  RULE_OPTION_LBA_ISLAMIC_FIGHTING_GROUP: "Insurgency In The Sahel"
  RULE_OPTION_LBA_ISLAMIC_FIGHTING_GROUP_DESC: "The Libyan Islamic Fighting Group will assassinate Gaddafi and try to conquer the Sahel."
