--- a/localisation/french/MD_politics_content_l_french.yml
+++ b/localisation/french/MD_politics_content_l_french.yml
@@ -36,30 +36,30 @@
  MD4_election_campaign.10.t: "Un désastre pour la campagne de [Root.GetLeader]"
  MD4_election_campaign.10.d: "Avec le plus grand nombre de participants de la campagne, la scène était prête pour que [Root.GetLeader] brille. Malheureusement, l'orateur controversé qui avait été invité pour susciter l'enthousiasme a déchiré le discours que nous avions préparé et s'est lancé dans une longue tirade sur les « échecs de toutes les administrations, y compris celle-ci », puis a appelé les jeunes à « voter avec leur cœur ou rester chez eux ».\n\nInutile de dire que cette phrase a ensuite été diffusée dans tous les médias, sous le regard réjoui de nos adversaires."
  MD4_election_campaign.10.a: "Quel échec !"
- election_coalition_won.0.t: "Élections [Root.GetAdjFP] : la coalition gouvernementale obtient la majorité !"
+ election_coalition_won.0.t: "[Root.GetAdjective] Élections : la coalition gouvernementale remporte la majorité !"
  election_coalition_won.0.d: "Les partis actuellement au pouvoir ont obtenu la majorité dans le nouveau parlement et peuvent prolonger leur mandat pour gouverner ensemble."
  election_coalition_won.0.a: "Continuer avec le gouvernement actuel."
  election_coalition_won.0.b: "Apporter des changements en formant un nouveau gouvernement."
- election_single_party.0.t: "Élections [Root.GetAdjFP] : le [Root.GetRulingParty] remporte la majorité !"
+ election_single_party.0.t: "[Root.GetAdjective] Élections : [Root.GetRulingParty] remporte la majorité !"
  election_single_party.0.d: "Le [Root.GetRulingParty] a remporté à lui seul la majorité des sièges parlementaires. Quelle grande victoire !"
  election_single_party.0.a: "Quel grand jour pour la démocratie !"
- election_single_party.1.t: "Élections [Root.GetAdjFP] : [Root.GetLeader] vaincu !"
- election_single_party.1.d: "Avec le [show_biggest_party_elect] remportant à lui seul la majorité des sièges parlementaires, l'avenir politique de [Root.GetLeader] est pratiquement terminé, les membres du [Root.GetRulingParty] appelant à sa démission.\n\n[show_biggest_party_elect] prendra immédiatement le relais en tant que nouveau gouvernement [Root.GetAdjMS]."
+ election_single_party.1.t: "[Root.GetAdjective] Élections : [Root.GetLeader] vaincu !"
+ election_single_party.1.d: "Avec [show_biggest_party_elect] remportant à lui seul la majorité des sièges parlementaires, l'avenir politique de [Root.GetLeader] est pratiquement terminé, les membres de [Root.GetRulingParty] appelant à la démission.\n\n[show_biggest_party_elect] prendra immédiatement la relève en tant que nouveau gouvernement de [Root.GetName]."
  election_single_party.1.a: "Reconnaître la défaite et féliciter le vainqueur."
  MD4_election.0.t: "caché"
  MD4_election.0.d: ""
  MD4_election.0.a: "caché"
  MD4_election.1.t: "Le [Root.GetRulingParty] réélu !"
- MD4_election.1.d: "Après le dépouillement des votes, les électeurs de [Root.GetAdjMP] ont décidé de confier un nouveau mandat à [Root.GetLeader]. Avec un taux d'approbation élevé, [Root.GetLeader] a gagné sans avoir besoin de passer des accords avec d'autres partis pour s'assurer leur soutien."
- MD4_election.1.d_term_ended: "Après le dépouillement des votes, les électeurs [Root.GetAdjMP] ont décidé d'accorder un nouveau mandat au parti de [Root.GetLeader]. Cependant, comme [Root.GetLeader] a atteint la fin de son dernier mandat, il laissera la place à un nouveau dirigeant."
+ MD4_election.1.d: "Une fois tous les votes comptés, les électeurs de [Root.GetAdjective] ont décidé de donner un autre mandat à [Root.GetLeader]. Avec des taux d'approbation élevés, [Root.GetLeader] a gagné sans avoir besoin de conclure des accords avec d'autres parties pour obtenir leur soutien."
+ MD4_election.1.d_term_ended: "Une fois tous les votes comptés, les électeurs de [Root.GetAdjective] ont décidé de donner un autre mandat au parti de [Root.GetLeader]. Cependant, comme [Root.GetLeader] a atteint la fin de son dernier mandat, ils céderont la place à un nouveau leader."
  MD4_election.1.a: "C'est vrai ce qu'on dit - [Root.GetLeader] est vraiment le meilleur !"
  MD4_election.2.t: "La coalition de [Root.GetLeader] réélue !"
- MD4_election.2.d: "Après le dépouillement des votes, les électeurs [Root.GetAdjMP] ont décidé d'accorder un nouveau mandat à [Root.GetLeader] et au [Root.GetRulingParty]. Les partis actuellement au pouvoir ont obtenu une majorité au sein du nouveau parlement et peuvent prolonger leur mandat pour gouverner ensemble. [Root.GetLeader] continue de bénéficier de leur soutien en tant que dirigeant [Root.GetDuDelaDelNP] [Root.GetName]."
- MD4_election.2.d_term_ended: "Après dépouillement des votes, les électeurs [Root.GetAdjMP] ont décidé d'accorder un nouveau mandat au [Root.GetRulingParty]. Les partis actuellement au pouvoir ont obtenu une majorité au sein du nouveau parlement et peuvent prolonger leur mandat pour gouverner ensemble. Étant donné que [Root.GetLeader] a atteint la fin de son dernier mandat, un nouveau dirigeant sera chargé de gouverner [Root.GetNameWithFlag]."
+ MD4_election.2.d: "Une fois tous les votes comptés, les électeurs de [Root.GetAdjective] ont décidé de donner un autre mandat à [Root.GetLeader] et [Root.GetRulingParty]. Les partis actuellement au pouvoir ont obtenu la majorité au nouveau parlement et peuvent prolonger leur mandat pour gouverner ensemble. [Root.GetLeader] continue de bénéficier de son soutien en tant que leader de [Root.GetNameWithFlag]."
+ MD4_election.2.d_term_ended: "Une fois tous les votes comptés, les électeurs de [Root.GetAdjective] ont décidé de donner un autre mandat à [Root.GetRulingParty]. Les partis actuellement au pouvoir ont obtenu la majorité au nouveau parlement et peuvent prolonger leur mandat pour gouverner ensemble. Puisque [Root.GetLeader] a atteint la fin de son dernier mandat, un nouveau leader se chargera de gouverner [Root.GetNameWithFlag]."
  MD4_election.2.a: "C'est vrai ce qu'on dit - [Root.GetLeader] est vraiment le meilleur !"
  MD4_election.2.b: "Apporter des changements en formant un nouveau gouvernement."
  MD4_election.3.t: "Défaite électorale pour [Root.GetLeader] !"
- MD4_election.3.d: "Après le dépouillement des votes, [Root.GetLeader] semble incapable d'obtenir le soutien des électeurs [Root.GetAdjMP] pour un nouveau mandat. C'est donc au tour du [show_biggest_party_elect] de briller. Avec ([show_biggest_elect_percentage]), ils ont recueilli à eux seuls suffisamment de soutien pour gouverner en toute indépendance.\n\n Le contrôle [Root.GetDuDelaDelNP [Root.GetName] sera transmis au [show_biggest_party_elect]."
+ MD4_election.3.d: "Avec tous les votes comptés, [Root.GetLeader] semble incapable d'obtenir le soutien des électeurs de [Root.GetAdjective] pour un autre mandat. Au lieu de cela, c'était le moment pour [show_biggest_party_elect] de briller. Avec ([show_biggest_elect_percentage]), ils ont rassemblé à eux seuls suffisamment de soutien pour gouverner seuls.\n\nLe contrôle de [Root.GetName] sera transmis à [show_biggest_party_elect]."
  MD4_election.3.a: "Reconnaître la défaite et féliciter le vainqueur."
  MD4_election.4.t: "Élections : résultat non concluant pour [Root.GetLeader] !\n"
  MD4_election.4.d: "Après dépouillement des votes, [Root.GetLeader] n'a pas encore la majorité au nouveau parlement pour former un nouveau gouvernement. Il faut convaincre d'autres partis de le rejoindre et, si cela s'avère impossible, il faut donner le contrôle à l'un des autres partis pour qu'il essaie de former un gouvernement."
@@ -68,17 +68,17 @@
  MD4_election.5.d: "Après le dépouillement des votes, [Root.GetLeader] n'a même pas réussi à atteindre le seuil minimum pour que le [Root.GetRulingParty] entre au parlement. Il est clair que quelqu'un d'autre devra former un gouvernement pour faire avancer [Root.GetNameDef], mais qui ?"
  MD4_election.5.a: "[show_biggest_party_elect] ([show_biggest_elect_percentage]) essaiera"
  MD4_election.5.b: "[show_second_biggest_party_elect] ([show_second_biggest_elect_percentage]) essaiera"
- News_MD4_election.0.t: "Élection [From.GetAdjFS] : le [From.GetRulingParty] réélu !\n"
- News_MD4_election.0.d: "[From.GetLeader], du [From.GetRulingParty] ([From.GetRulingIdeology]), a vaincu à lui seul tous ses adversaires et poursuivra son mandat de dirigeant [From.GetAdjMS]."
- News_MD4_election.0.d_first_term: "[From.GetLeader], du [From.GetRulingParty] ([From.GetRulingIdeology]), a vaincu à lui seul tous ses adversaires et succédera à son prédécesseur pour son premier mandat en tant que dirigeant [From.GetDuDelaDelNP] [From.GetName]."
+ News_MD4_election.0.t: "[From.GetAdjective] Élection : [From.GetRulingParty] Réélu！"
+ News_MD4_election.0.d: "[From.GetLeader] du [From.GetRulingParty] ([From.GetRulingIdeology]) a vaincu à lui seul tous les challengers et poursuivra un autre mandat en tant que leader de [From.GetAdjective]."
+ News_MD4_election.0.d_first_term: "[From.GetLeader] du [From.GetRulingParty] ([From.GetRulingIdeology]) a vaincu à lui seul tous les challengers et succédera à son prédécesseur pour son premier mandat en tant que leader de [From.GetAdjective]."
  News_MD4_election.0.a: "D'accord."
- News_MD4_election.1.t: "Élection [From.GetAdjFS] : [From.GetLeader] forme un nouveau gouvernement !\n"
+ News_MD4_election.1.t: "[From.GetAdjective] Élection : [From.GetLeader] forme un nouveau gouvernement！"
  News_MD4_election.1.d: "\n\n[From.GetLeader], du [From.GetRulingParty] ([From.GetRulingIdeology]), est sorti victorieux des élections et, avec le soutien d'autres partis au gouvernement, est maintenant chargé de faire avancer [From.GetNameDef]."
  News_MD4_election.1.a: "D'accord."
- News_MD4_election.2.t: "Élection [From.GetAdjFS] : [From.GetLeader] remporte une grande victoire inattendue !\n"
+ News_MD4_election.2.t: "Élection [From.GetAdjective] : [From.GetLeader] gagne gros en surprise！"
  News_MD4_election.2.d: "\n\n[From.GetLeader], du [From.GetRulingParty] ([From.GetRulingIdeology]), a réussi l'exploit apparemment impossible de battre le gouvernement en place à lui tout seul. En formant seul un gouvernement majoritaire, [From.GetLeader] est sorti victorieux de l'élection et est maintenant chargé de diriger [From.GetNameDef]."
  News_MD4_election.2.a: "D'accord."
- News_MD4_election.3.t: "Élections controversées [From.GetAdjFP] : [From.GetLeader] réélu !\n"
+ News_MD4_election.3.t: "Élections controversées de [From.GetAdjective] : [From.GetLeader] réélu !"
  News_MD4_election.3.d: "[From.GetLeader] ([From.GetRulingIdeology]) a remporté l'élection après un recomptage des voix - l'opposition n'a pas été autorisée à vérifier les résultats de manière indépendante et affirme que l'élection a été truquée et biaisée en faveur de [From.GetLeader]. Le premier comptage original - aujourd'hui annulé - montrait que l'opposition était en tête avec une faible marge."
  News_MD4_election.3.a: "D'accord."
  coalition_complete.0.t: "Gouvernement formé !"
@@ -129,11 +129,11 @@
  coalition.7.a: "Bienvenue dans l'équipe !"
  coalition.7.b: "Nous devons gentiment refuser."
  coalition.8.t: "Négociations avec le [Mod_Vilayat_e_Faqih_L] ([?party_pop_elect_array^8|%0])"
- coalition.8.d: "Cher [Root.GetLeader]. Nous, les chiites d'Ali ibn Abi Talib, sommes prêts à nous tenir par la main et à nous joindre à vous pour résister courageusement aux sionistes et à leurs monstres Takfiri. Ensemble, nous allons, avec l'inspiration des saints martyrs, chasser les ennemis du Vrai Islam de la surface de la terre. Nous, les épées d'Allah, regarderons certainement Sayyid Khamenei et Sayyid Hassan Nasrallah pour les guider, mais n'ayez crainte, car nous sommes de vrais [Root.GetAdjMP] patriotes qui saigneront pour préserver notre sol sacré si nécessaire. Avons-nous mentionné que nous nous considérons comme des modérés ?"
+ coalition.8.d: "Respecté [Root.GetLeader]. Nous, les chiites d’Ali ibn Abi Talib, sommes prêts à vous tenir la main et à vous joindre à vous pour résister courageusement aux sionistes et à leurs enfers takfiris. Ensemble, nous allons, en nous inspirant des saints martyrs, chasser les ennemis du véritable Islam de la surface de la terre. Nous, les épées d'Allah, regarderons certainement Sayyid Khamenei et Sayyid Hassan Nasrallah pour obtenir des conseils, mais n'ayez crainte, car nous sommes de vrais patriotes [Root.GetAdjective] qui saigneront pour préserver notre sol sacré si nécessaire. Avons-nous mentionné que nous nous considérons comme modérés ?"
  coalition.8.a: "Mort aux sionistes !"
  coalition.8.b: "Je préférerais être torturé."
  coalition.9.t: "Négociations avec le [Vilayat_e_Faqih_L] ([?party_pop_elect_array^9|%0])"
- coalition.9.d: "Cher [Root.GetLeader]. Nous, les chiites d'Ali ibn Abi Talib, sommes prêts à nous tenir par la main et à nous joindre à vous pour résister courageusement aux sionistes et à leurs monstres Takfiri. Ensemble, nous allons, avec l'inspiration des saints martyrs, chasser les ennemis du Vrai Islam de la surface de la terre. Nous, les épées d'Allah, regarderons certainement Sayyid Khamenei et Sayyid Hassan Nasrallah pour les guider, mais n'ayez crainte, car nous sommes de vrais [Root.GetAdjMP] patriotes qui saigneront pour préserver notre sol sacré si nécessaire."
+ coalition.9.d: "Respecté [Root.GetLeader]. Nous, les chiites d’Ali ibn Abi Talib, sommes prêts à vous tenir la main et à vous joindre à vous pour résister courageusement aux sionistes et à leurs enfers takfiris. Ensemble, nous allons, en nous inspirant des saints martyrs, chasser les ennemis du véritable Islam de la surface de la terre. Nous, les épées d'Allah, regarderons certainement Sayyid Khamenei et Sayyid Hassan Nasrallah pour obtenir des conseils, mais n'ayez crainte, car nous sommes de vrais patriotes [Root.GetAdjective] qui saigneront pour préserver notre sol sacré si nécessaire."
  coalition.9.a: "Mort aux sionistes !"
  coalition.9.b: "Je préférerais être torturé."
  coalition.10.t: "Négociations avec le [Kingdom_L] ([?party_pop_elect_array^10|%0])"
@@ -177,7 +177,7 @@
  coalition.19.a: "En avant ensemble, camarades !"
  coalition.19.b: "Non."
  coalition.20.t: "Négociations avec le [Nat_Populism_L] ([?party_pop_elect_array^20|%0])"
- coalition.20.d: "Cher [Root.GetLeader]. Vous êtes vraiment sage de nous parler, tout le monde sait que nous sommes la véritable voix du bon sens et de la raison. Cependant, afin de remplir le rôle du [Nat_Populism_L] en tant que phare du bon sens, nous devons insister pour que vous adoptiez des politiques appropriées. Le gouvernement [Root.GetAdjMS] a depuis trop longtemps pillé la nation, livrant nos richesses et notre dignité aux multinationales qui importent une main-d'œuvre bon marché par le biais d'un système d'immigration défaillant ! En plus de prendre nos emplois, les immigrants exploitent également nos allocations de chômage et notre système de protection sociale. En outre, nous devons investir dans nos infrastructures défaillantes et réduire les impôts ! Notre armée manque cruellement d'effectifs et est mal équipée - elle doit être développée de toute urgence. Avons-nous mentionné la police ? Elle n'a clairement pas les ressources nécessaires pour faire face à tous les criminels que nos gouvernements précédents ont importés. Pendant ce temps, nos personnes âgées ne sont pas correctement prises en charge - une honte ! Alors, avons-nous un accord ?"
+ coalition.20.d: "Respecté [Root.GetLeader]. Vous êtes vraiment sage de nous parler, tout le monde sait que nous sommes la véritable voix du bon sens et de la raison. Cependant, pour remplir le rôle de [Nat_Populism_L] en tant que phare du bon sens, nous devons insister pour que vous adoptiez des politiques appropriées. L’establishment politique de [Root.GetName] a pillé la nation pendant trop longtemps, livrant nos richesses et notre dignité aux sociétés multinationales qui importent de la main d’œuvre bon marché via un système d’immigration défaillant ! En plus de nous prendre nos emplois, les immigrants exploitent également nos allocations de chômage et notre système de protection sociale. De plus, nous devons investir dans nos infrastructures défaillantes et réduire les impôts ! Notre armée est criminellement en sous-effectif et mal équipée – elle doit être élargie de toute urgence. Avons-nous mentionné la police? Ils n’ont manifestement pas les ressources nécessaires pour lutter contre tous les criminels importés par nos gouvernements précédents. Pendant ce temps, nos personnes âgées ne sont pas correctement prises en charge – une honte ! Alors, est-ce qu'on a un accord ?"
  coalition.20.a: "Bienvenue à bord !"
  coalition.20.b: "Laissez-moi tranquille."
  coalition.21.t: "Négociations avec le [Nat_Fascism_L] ([?party_pop_elect_array^21|%0])"
@@ -189,7 +189,7 @@
  coalition.22.a: "La politique est trop importante pour être laissée aux politiciens."
  coalition.22.b: "La politique est trop importante pour être laissée aux généraux."
  coalition.23.t: "Négociations avec le [Monarchist_L] ([?party_pop_elect_array^23|%0])"
- coalition.23.d: "Cher [Root.GetLeader]. Nous, royalistes, nous moquons de l'idée que vous, roturier, puissiez jamais fournir [Root.GetAuAlaAlNP] [Root.GetName] la stabilité nécessaire et les autres avantages splendides que seul un monarque absolu peut conférer. Nous savons tous que le véritable pouvoir exécutif suprême ne peut être exercé correctement que par la royauté dans toute sa sainteté. Ce serait vraiment une force unificatrice et un symbole puissant de notre grandeur, alors que nous marchons vers une restauration nationale complète. Il est clair que les monarchies absolues, bénies par le droit divin, surpassent toutes les autres formes de gouvernement dans tous les domaines.\n\nD'accord, nous n'allons évidemment pas vous couronner, donc nous pourrions conserver le gouvernement républicain désuet et anachronique pendant un certain temps, pendant que nous, royalistes de la coalition, cherchons le meilleur candidat pour le trône."
+ coalition.23.d: "Respecté [Root.GetLeader]. Nous, les royalistes, nous moquons de l'idée selon laquelle vous, un roturier, pourriez un jour fournir à [Root.GetName] la stabilité nécessaire et d'autres avantages splendides que seul un monarque absolu peut accorder. Nous savons tous que le véritable pouvoir exécutif suprême ne peut être correctement exercé que par la royauté dans toute sa sainteté. Ce serait véritablement une force unificatrice et un symbole puissant de notre grandeur, alors que nous marchons vers une restauration nationale complète. De toute évidence, les monarchies absolues, bénies de droit divin, surpassent toutes les autres formes de gouvernement dans tous les domaines.\n\nD'accord, nous n'allons évidemment pas vous couronner, nous pourrions donc conserver le gouvernement républicain dépassé et anachronique pendant un certain temps, pendant que nous, royalistes de la coalition, recherchons le meilleur candidat pour le trône."
  coalition.23.a: "Oui, bien sûr, peu importe."
  coalition.23.b: "Vous n'êtes clairement pas aptes à gouverner..."
  red_adm_spending_TT: "§RNos dépenses administratives prévues sont - [exp_adm_spending_text_TT]\n§!"
