--- a/localisation/french/MD_scripted_diplomatic_actions_l_french.yml
+++ b/localisation/french/MD_scripted_diplomatic_actions_l_french.yml
@@ -3,7 +3,7 @@
  RECALL_VOLUNTEERS_ACTION_DESC: "À un moment donné, nous pouvons choisir de rappeler nos forces d'intervention."
  RECALL_VOLUNTEERS_TOOLTIP: "§Y[This.GetNameWithFlag]§! §Rdoit disposer de forces d'intervention actives que nous pouvons retirer.§!"
  RECALL_VOLUNTEERS_TOOLTIP_G: "§Y[This.GetNameWithFlag]§! doit disposer de forces d'intervention actives que nous pouvons retirer."
- RECALL_VOLUNTEERS_SEND_DESC: "Le combat [THIS.GetDuDelaDelNP] [This.GetFlag] §Y[This.GetName]§! n'est plus notre combat. Il est temps que nous retirions nos forces du conflit.\n\n§YCette action permettra de retirer nos forces d'intervention [THIS.GetDuDelaDelNP] [This.GetFlag] §Y[This.GetName]§!"
+ RECALL_VOLUNTEERS_SEND_DESC: "Le combat §Y[This.GetNameWithFlag]§! se retrouve dans ce n'est plus notre combat. Il est temps de retirer nos forces du conflit.\n\n§YCette action retirera nos Forces d'Intervention du §Y[This.GetNameWithFlag]§!§!"
  base_trade_condition: "Réticence de la base à l'égard de l'§Yaccord commercial§!"
  condition_two: "Réticence du type de gouvernement"
  condition_three: "Réticence de l'opinion"
@@ -18,18 +18,18 @@
  PROPOSE_IMPROVED_TRADE_AGREEMENT_TITLE: "Proposer un §Yaccord commercial§! !"
  PROPOSE_IMPROVED_TRADE_AGREEMENT_ACTION_DESC: "Proposer un §YAccord Commercial§! avec cette nation devrait être un accord mutuellement bénéfique, apportant une plus grande prospérité à notre nation et à la leur. Si la nation cherche à investir, avoir un §YAccord Commercial§! augmente également vos chances d'obtenir des investissements.\n\nLes facteurs suivants influencent la réaction de l'IA à l'accord :\nMême gouvernement, Opinion, Influence, Faction, Adhésion à l'UE, Adhésion à l'OTAN."
  PROPOSE_TRADE_AGREEMENT_TOOLTIP: "N'a pas d'accord commercial avec §Y[This.GetNameWithFlag]§!\n"
- PROPOSAL_MISSING_TOOLTIP: "N'est pas en train de considérer une offre [THIS.GetDuDelaDelNP] [This.GetFlag] §Y[This.GetName]§!\n"
+ PROPOSAL_MISSING_TOOLTIP: "N’envisage pas actuellement une offre de §Y[This.GetNameWithFlag]§!\n"
  PROPOSE_TRADE_AGREEMENT_DESC: "Un §YAccord Commercial§! entre nos deux nations augmentera l'influence commerciale de §G100§! et l'opinion avec §Y[This.GetNameWithFlag]§! de §G25§! s'il est accepté. Les deux nations recevront également §G~1%§! d'influence l'une sur l'autre."
- PROPOSE_TRADE_AGREEMENT_ACCEPT_TT: "[THIS.GetNameWithFlag] [THIS.GetAOntNP] accepté l'accord !"
- PROPOSE_TRADE_AGREEMENT_ACCEPT_DESC: "[THIS.GetNameWithFlag] [THIS.GetAOntNP] accepté l'accord produisant les effets suivants :\n\nInfluence commerciale augmente de §G50§!\nOpinion augmente de §G25§!\nInfluence des deux pays entre eux augmente de §G~1%§!\n"
- PROPOSE_TRADE_AGREEMENT_REJECT_TT: "[THIS.GetNameWithFlag] [THIS.GetAOntNP] rejeté l'accord !"
- PROPOSE_TRADE_AGREEMENT_REJECT_DESC: "Malheureusement, [THIS.GetNameWithFlag] [THIS.GetAOntNP] rejeté notre accord commercial. Peut-être qu'un autre jour nous pourrons signer un accord."
+ PROPOSE_TRADE_AGREEMENT_ACCEPT_TT: "[THIS.GetNameWithFlag] §GAccepté§! le §YAccord Commercial§!!"
+ PROPOSE_TRADE_AGREEMENT_ACCEPT_DESC: "[THIS.GetNameWithFlag] a accepté l'accord produisant les effets suivants :\n\nInfluence commerciale augmente de §G50§!\nOpinion augmente de §G25§!\nInfluence des deux pays entre eux augmente de §G~1%§!\n"
+ PROPOSE_TRADE_AGREEMENT_REJECT_TT: "[THIS.GetNameWithFlag] §RRejecté§! le §YAccord Commercial§!!"
+ PROPOSE_TRADE_AGREEMENT_REJECT_DESC: "Malheureusement, [THIS.GetNameWithFlag] a rejeté notre accord commercial. Peut-être qu'un autre jour nous pourrions signer un accord."
  CANCEL_TRADE_AGREEMENT_TITLE: "Mettre fin à l'accord commercial"
  CANCEL_TRADE_AGREEMENT_ACTION_DESC: "Mettre fin à l'accord commercial avec cette nation causera des tensions entre nos nations."
  CANCEL_TRADE_AGREEMENT_TOOLTIP: "A un accord commercial avec §Y[This.GetNameWithFlag]§!\n"
  CANCEL_TRADE_AGREEMENT_DESC: "Mettre fin à l'accord commercial a les effets suivants :\n\nInfluence commerciale diminue de §R50§!\nOpinion diminue de §R25§! avec un malus d'opinion de §R15§! en raison de la rupture de l'accord\n"
  CANCEL_TRADE_AGREEMENT_RECIEVING_TT: "Transmission de [Root.GetNameWithFlag]"
- CANCEL_TRADE_AGREEMENT_RECIEVING_DESC: "Message [THIS.GetDuDelaDelNP] [This.GetFlag] §Y[This.GetName]§!. Ils changent leur statut diplomatique avec nous: Annuler l'Accord Commercial"
+ CANCEL_TRADE_AGREEMENT_RECIEVING_DESC: "Message de §Y[Root.GetNameWithFlag]§! change son statut diplomatique avec nous : Annuler l'accord commercial"
  DIPLO_ACTION_ASSUME_DEBT_TITLE: "Recouvrir la dette"
  DIPLO_ACTION_ASSUME_DEBT_ACTION_DESC: "Nous pouvons recouvrir la dette d'une autre nation pour aider à apaiser leurs problèmes économiques. S'ils choisissent d'accepter cette offre, nous gagnerons une petite quantité d'influence et d'opinion et recouvrirons 25% de leur dette. Elle est d'abord prélevée sur notre trésorerie."
  DIPLO_ACTION_ASSUME_DEBT_DESC: "Nous pouvons recouvrir la dette d'une autre nation pour aider à apaiser leurs problèmes économiques. S'ils choisissent d'accepter cette offre, nous gagnerons une petite quantité d'influence et d'opinion et recouvrirons 25% de leur dette. Elle est d'abord prélevée sur notre trésorerie."
