--- a/localisation/french/MD_subideology_parties_l_french.yml
+++ b/localisation/french/MD_subideology_parties_l_french.yml
@@ -1139,7 +1139,7 @@
  SER.Conservative_desc: "Reactionary - Jedinstvena Srbija (United Serbia) A minor national-conservative party. It is staunchly socially conservative, and it also advocates regionalism."
  SER.Autocracy: "£SER_Autocracy Srpska Narodna Partija"
  SER.Autocracy_icon: "£SER_Autocracy"
- SER.Autocracy_desc: "Autocrats - Srpska Narodna Partija (Serbian People's Party). SNP is a populist Russophile right-wing party. The party favours closer ties between Serbia and Russia and opposes Serbian membership in the European Union."
+ SER.Autocracy_desc: "Autocrate - Le Srpska Narodna Partija (Parti populaire serbe, SNP) est un parti populiste de droite russophile. Le parti est favorable à un renforcement des liens entre la Serbie et la Russie et s'oppose à l'adhésion de la Serbie à l'Union européenne."
  SER.Neutral_Muslim_Brotherhood: "£SER_Neutral_Muslim_Brotherhood BDSS"
  SER.Neutral_Muslim_Brotherhood_icon: "£SER_Neutral_Muslim_Brotherhood"
  SER.Neutral_Muslim_Brotherhood_desc: "Moderate Islamist - Bošnjačka demokratska stranka Sandžaka (Bosniak Democratic Party of Sandžak). A minor party advocating for the rights of Bosnian Muslims."
@@ -6205,7 +6205,7 @@
  MLW.Neutral_Libertarian_desc: ""
  MLW.Nat_Autocracy: "£MLW_Nat_Autocracy Malawian Defence Force"
  MLW.Nat_Autocracy_desc: ""
- MNT.conservatism: "£MNT_western_conservativealt Democratic Montenegro (DM)"
+ MNT.conservatism: "£MNT_western_conservativealt Monténégro démocratique (DM)"
  MNT.conservatism_icon: "£MNT_western_conservativealt"
  MNT.conservatism_desc: ""
  MNT.liberalism: "£MNT_western_liberal Liberal Party of Montenegro (LPM)"
@@ -6229,7 +6229,7 @@
  MNT.Neutral_conservatism: "£MNT_non_aligned_conservative People's Party"
  MNT.Neutral_conservatism_icon: "£MNT_non_aligned_conservative"
  MNT.Neutral_conservatism_desc: ""
- MNT.neutral_Social: "£MNT_western_conservative Socialist People's Party (SNP)"
+ MNT.neutral_Social: "£MNT_western_conservative Parti populaire socialiste (SNP)"
  MNT.neutral_Social_icon: "£MNT_western_conservative"
  MNT.neutral_Social_desc: ""
  MNT.Neutral_Communism: "£MNT_Neutral_Communism Workers' Party (RP)"
@@ -6797,7 +6797,7 @@
  RWA.Monarchist_icon: "£RWA_nationalist_monarchist"
  SAM.Monarchist: "£generic_Monarchist_small O le Ao o le Malo"
  SAM.Monarchist_desc: ""
- SCO.Western_Autocracy: "£generic_Western_Autocracy_small SNP - Scottish National Party"
+ SCO.Western_Autocracy: "£generic_Western_Autocracy_small SNP - Parti national écossais"
  SCO.Western_Autocracy_desc: "Scottish Nationalist - "
  SCO.conservatism: "£generic_conservatism_small SC - Scottish Conservative & Unionist Party"
  SCO.conservatism_desc: "Western Conservative - "
@@ -7210,7 +7210,7 @@
  SYR.Neutral_Communism_desc: "The People's Will Party is a political party made up of expelled members of the £SYR_Communist_State Syrian Communist Party. In organization, the People's Will Party follows democratic centralism. Nonetheless, it has no assignment for a Secretary General; instead, a collective leadership of the members of the Central Council that are elected in the General Conference rules the party. The Central Council elects its members of the Presidium and members of the Secretariat to undertake daily tasks"
  SYR.Nat_Populism: "£SYR_Nat_Fascism Syrian Social Nationalist Party"
  SYR.Nat_Populism_icon: "£SYR_Nat_Fascism"
- SYR.Nat_Populism_desc: "The Syrian Social Nationalist Party (SSNP) is a nationalist political party operating in Lebanon, Syria, Jordan, Iraq and Palestine. It advocates the establishment of a Syrian nation state spanning the Fertile Crescent, including present day Syria, Lebanon, Iraq, Kuwait, Jordan, Palestine, Israel, Cyprus, Sinai, southeastern Turkey, based on geographical boundaries and the common history people within the boundaries share. With over 100,000 it is the second largest legal political group in Syria after the ruling Arab Socialist Ba'ath Party, In Lebanon, it has been a major secular and highly organised elite party in the political history of the country for over 80 years."
+ SYR.Nat_Populism_desc: "Le Parti social-nationaliste syrien (SSNP) est un parti politique nationaliste opérant au Liban, en Syrie, en Jordanie, en Irak et en Palestine. Il préconise la création d'un État-nation syrien s'étendant sur le Croissant fertile, comprenant aujourd'hui la Syrie, le Liban, l'Irak, le Koweït, la Jordanie, la Palestine, Israël, Chypre, le Sinaï et le sud-est de la Turquie, sur la base des frontières géographiques et de l'histoire commune des peuples à l'intérieur des frontières. partager. Avec plus de 100 000 membres, il s'agit du deuxième groupe politique légal en Syrie après le parti Baas socialiste arabe au pouvoir. Au Liban, il est un parti d'élite laïc et hautement organisé majeur dans l'histoire politique du pays depuis plus de 80 ans."
  SYR.Nat_Fascism: "£IRQ_Nat_Autocracy_small Syrian Ba'ath Party (Iraqi Wing)"
  SYR.Nat_Autocracy: "£SYR_Nat_Autocracy Syrian Arab Armed Forces"
  SYR.Nat_Autocracy_icon: "£SYR_Nat_Autocracy"
