--- a/localisation/french/replace/replaced_from_focus_filter_tag_l_french.yml
+++ b/localisation/french/replace/replaced_from_focus_filter_tag_l_french.yml
@@ -106,3 +106,8 @@
  FOCUS_FILTER_UKRAINE_REGIONS: "Le Parti des Régions"
  FOCUS_FILTER_UKRAINE_SERVANT: "Serviteur du Peuple"
  FOCUS_FILTER_UKRAINE_POROH: "Solidarité européenne"
+ FOCUS_FILTER_ISRFOREIGNPOL: "La politique étrangère d'Israël"
+ FOCUS_FILTER_ISRMILITARY: "Tzahal-FDI"
+ FOCUS_FILTER_ISRPALSTUFF: "Israël-Palestine"
+ FOCUS_FILTER_ISRPOLICE: "Misteret Yisra'el"
+ FOCUS_FILTER_ISRECON: "Économie israélienne"
