--- a/localisation/polish/MD_focus_EU_l_polish.yml
+++ b/localisation/polish/MD_focus_EU_l_polish.yml
@@ -502,7 +502,7 @@
  EU_show_available_desc_999_loc_key: "[!]"
  EU_show_available_desc_998_loc_key: "[!]"
  EU_MD_LAW_FLOWCHART: "Opens the MD §CEuropean Union§! Flowchart"
- EU_MD_LAW_FLOWCHART_DESC: "You can zoom in on the flowchart while in the screen by double-clicking."
+ EU_MD_LAW_FLOWCHART_DESC: "Możesz powiększyć schemat blokowy na ekranie, klikając dwukrotnie."
  EU001: "Polityka UE"
  EU001_desc: "Polityka §C[EUU.GetFlag] UE§! są określone przez wartości, cele i zasady Unii. Ponieważ UE zaczynała jako wspólnota gospodarcza, polityka gospodarcza jest nadal ważnym obszarem w UE. Zgodnie ze swoimi wartościami UE stara się promować dobrobyt, bezpieczeństwo i interesy obywateli. UE pragnie utrzymać stabilność i konkurencyjność gospodarki. UE próbuje się zreformować..."
  EU702: "Traktat o wystąpieniu"
@@ -1201,7 +1201,7 @@
  tooltip_invest_in_EU_single_market_infra: "Otrzymuje §YOfertę inwestycji infrastrukturalnych§! z §Y[ROOT.GetNameWithFlag]§!.\n"
  tooltip_EU_money_for_influence: "§Y[THIS.GetNameWithFlag]§!: Dodaj trochę pieniędzy. §Y[ROOT.GetNameWithFlag]§! uzyskaj wpływ na §Y[THIS.GetNameWithFlag]§!."
  EU_show_display_effects_for_law_tt: "In addition, the §C[EUU.GetNameWithFlag]§! and her §YMember States§! gain the following effects:\n"
- EU_show_display_effects_for_law_no_effect_tt: "There is no additional effect for this law."
+ EU_show_display_effects_for_law_no_effect_tt: "To prawo nie ma żadnego dodatkowego skutku."
  tooltip_EU_parliament_focus_EU002_EP_agenda: "Stawia §YPolitykę państwa członkowskiego§! w porządku obrad PE.\nAktywuj misję §YZatwierdź politykę państwa członkowskiego§!"
  tooltip_EU_parliament_focus_EU101_EP_agenda: "Stawia §YKartę praw podstawowych Unii Europejskiej§! w porządku obrad PE.\nAktywuj misję §YZatwierdź Kartę praw podstawowych Unii Europejskiej§!"
  tooltip_EU_parliament_focus_EU102_EP_agenda: "Stawia §YKonwencję Europejską§! w porządku obrad PE.\nAktywuj misję §YZatwierdź Konwencję Europejską§!"
