--- a/localisation/polish/MD_focus_IRQ_l_polish.yml
+++ b/localisation/polish/MD_focus_IRQ_l_polish.yml
@@ -1903,5 +1903,5 @@
  IRQ_bypass_reconstruction: "To skupienie zostanie ominięte, jeśli poddamy się bez walki"
  saudis_refused_to_expand_trade_relations: "Saudyjczycy odmówili rozszerzenia stosunków handlowych"
  IRQ_anti_iran_stance: "NIE jest [PER.GetFlag] §HPro-irańskim§! Grupa"
- IRQ_mek_revolted_already: "MEK Revolted Already"
- IRQ_war_with_shias: "War with Shias"
+ IRQ_mek_revolted_already: "MEK już się zbuntował"
+ IRQ_war_with_shias: "Wojna z szyitami"
