--- a/localisation/polish/MD_focus_ITA_l_polish.yml
+++ b/localisation/polish/MD_focus_ITA_l_polish.yml
@@ -514,11 +514,11 @@
  ITA_further_protect_workers_rights_decision: "Poprawa praw pracowników"
  ITA_further_protect_workers_rights_decision_desc: "Pracownicy zatrudnieni na podstawie umów na czas nieokreślony są już najbardziej chronioną kategorią we Włoszech, ale nadal stanowią największą grupę wyborców wraz z emerytami, więc uspokojenie ich to łatwa strategia zdobycia głosów, która zapewni utrzymanie wysokiego poziomu poparcia."
  ITA_further_protect_workers_rights_decision_repeal: "Wycofać nowe prawa pracownicze"
- ITA_ITA_modify_article_18: "Modify Article 18"
+ ITA_ITA_modify_article_18: "Zmiana artykułu 18"
  ITA_ITA_modify_article_18_desc: "Article 18 of the Statute of Workers makes it extremely hard for employers to fire their employees and our jobs market has suffered accordingly. Modifying it will surely kickstart accusations of \"forced labor\" and \"slavery\" from the opposition, but it's only common sense in reality."
- ITA_ITA_modify_article_18_decision: "Modify Article 18"
+ ITA_ITA_modify_article_18_decision: "Zmiana artykułu 18"
  ITA_ITA_modify_article_18_decision_desc: "Article 18 of the Statute of Workers makes it extremely hard for employers to fire their employees and our jobs market has suffered accordingly. Modifying it will surely kickstart accusations of \"forced labor\" and \"slavery\" from the opposition, but it's only common sense in reality."
- ITA_ITA_modify_article_18_decision_repeal: "Roll back modifications of Article 18"
+ ITA_ITA_modify_article_18_decision_repeal: "Wycofanie modyfikacji artykułu 18"
  ITA_save_struggling_companies: "Ratuj borykające się z problemem firmy"
  ITA_save_struggling_companies_desc: "Zagwarantowanie przetrwania niekonkurencyjnych firm nie jest tanie, ale pracownicy i związki zawodowe z pewnością będą pamiętać, kto uratował ich miejsca pracy, kiedy nadejdą wybory."
  ITA_save_struggling_companies_decision: "Ratuj borykające się z problemem firmy"
@@ -739,7 +739,7 @@
  ITA_attack_on_america_desc: "Stany Zjednoczone stały za inwazją na nasz kraj i upadkiem Włoch podczas II wojny światowej. Od tego czasu sytuacja Włoch jedynie się pogorszyła, ale teraz przywróciliśmy należne nam miejsce wśród światowych mocarstw. Dlatego w końcu przyszedł czas na zemstę. Spalimy Waszyngton, pokażmy Amerykanom prawdziwą potęgę dzieci Rzymu!"
  ITA_attack_on_america_spirit: "Atakuj Amerykę"
  ITA_attack_on_america_spirit_desc: "Stany Zjednoczone stały za inwazją na nasz kraj i upadkiem Włoch podczas II wojny światowej. Od tego czasu sytuacja Włoch jedynie się pogorszyła, ale teraz przywróciliśmy należne nam miejsce wśród światowych mocarstw. Dlatego w końcu przyszedł czas na zemstę. Spalimy Waszyngton, pokażmy Amerykanom prawdziwą potęgę dzieci Rzymu!"
- ITA_pax_romana: "Pax Romana"
+ ITA_pax_romana: "Pax Romana \"Pokój Rzymski\""
  ITA_pax_romana_desc: "Ostateczne przeznaczenie Rzymu jest wreszcie w naszym zasięgu. Raz na zawsze zjednoczymy całą planetę pod Cesarskim Orłem."
  ITA_with_europe: "Kontynuuj współpracę europejską"
  ITA_with_europe_desc: "Włochy muszą być blisko Unii Europejskiej. Powinniśmy dążyć do bliskich więzi z innymi członkami i ściślejszej współpracy."
