--- a/localisation/polish/MD_missiles_gui_l_polish.yml
+++ b/localisation/polish/MD_missiles_gui_l_polish.yml
@@ -209,10 +209,10 @@
  DECREASE_CIC: "£click_left Zmniejsz §YMnożnik produkcji§! tej produkcji o §G1§!."
  DECREASE_CIC_TT: "£key_ctrl + £click_left §YCtrl L Click§!: Zmniejsz §YMnożnik produkcji§! tej produkcji o §G10§!\n£key_shift + £click_left §YShift L Click§!: Zmniejsz §YMnożnik produkcji§! tej produkcji o §G100§!\nZmniejszenie płatności z góry spowolni produkcję, ale pozwoli zaoszczędzić trochę gotówki na opłaty początkowe."
  PRODUCTION_LEGEND_UNIT: "Jednostka"
- PRODUCTION_LEGEND_TOTAL: "Całkowity"
+ PRODUCTION_LEGEND_TOTAL: "Łącznie"
  PRODUCTION_TITLE_1: "Typ rakiety i przestrzeni"
  PRODUCTION_STATUS: "Stan"
- missile_type_prod_selected_NONE: "Nic"
+ missile_type_prod_selected_NONE: "Brak"
  modify_missile_inventory_count_tt: "Modyfikuje §Y[THIS.GetNameWithFlag]§! Zapas §Y[call_missile_localization_utility_loc]§! przez [?missile_count] (Aktualny: [?ROOT.missile_inventory_array^missile_index])\n"
  call_missile_localization_utility_1_loc: "[missile_type_prod_1_selected_loc]"
  call_missile_localization_utility_2_loc: "[missile_type_prod_2_selected_loc]"
@@ -235,7 +235,7 @@
  PRODUCTION_PRICE_1: "[?var_gui_prod_1_price_unit]\n§R[?var_gui_prod_1_price_total]§!"
  PRODUCTION_CIC_1: "[?prod_1_multiplier]"
  PRODUCTION_DURATION_1: "[?var_gui_prod_1_days_unit]\n§Y[?var_gui_prod_1_days]§!"
- PRODUCTION_START_1: "Początek"
+ PRODUCTION_START_1: "Stwórz"
  PRODUCTION_START_1_TT: "[!start_button_1_click_enabled]"
  PRODUCTION_TIME_1: "[?ROOT.days_mission_timeout@missile_construction_1|R0]"
  PRODUCTION_STOCKPILE_1: "[?ROOT.missile_inventory_array^var_gui_prod_1_missile_inventory_idx]"
@@ -244,7 +244,7 @@
  PRODUCTION_PRICE_2: "[?var_gui_prod_2_price_unit]\n§R[?var_gui_prod_2_price_total]§!"
  PRODUCTION_CIC_2: "[?prod_2_multiplier]"
  PRODUCTION_DURATION_2: "[?var_gui_prod_2_days_unit]\n§Y[?var_gui_prod_2_days]§!"
- PRODUCTION_START_2: "Początek"
+ PRODUCTION_START_2: "Stwórz"
  PRODUCTION_START_2_TT: "[!start_button_2_click_enabled]"
  PRODUCTION_TIME_2: "[?ROOT.days_mission_timeout@missile_construction_2|R0]"
  PRODUCTION_STOCKPILE_2: "[?ROOT.missile_inventory_array^var_gui_prod_2_missile_inventory_idx]"
@@ -253,7 +253,7 @@
  PRODUCTION_PRICE_3: "[?var_gui_prod_3_price_unit]\n§R[?var_gui_prod_3_price_total]§!"
  PRODUCTION_CIC_3: "[?prod_3_multiplier]"
  PRODUCTION_DURATION_3: "[?var_gui_prod_3_days_unit]\n§Y[?var_gui_prod_3_days]§!"
- PRODUCTION_START_3: "Początek"
+ PRODUCTION_START_3: "Stwórz"
  PRODUCTION_START_3_TT: "[!start_button_3_click_enabled]"
  PRODUCTION_TIME_3: "[?ROOT.days_mission_timeout@missile_construction_3|R0]"
  PRODUCTION_STOCKPILE_3: "[?ROOT.missile_inventory_array^var_gui_prod_3_missile_inventory_idx]"
@@ -262,7 +262,7 @@
  PRODUCTION_PRICE_4: "[?var_gui_prod_4_price_unit]\n§R[?var_gui_prod_4_price_total]§!"
  PRODUCTION_CIC_4: "[?prod_4_multiplier]"
  PRODUCTION_DURATION_4: "[?var_gui_prod_4_days_unit]\n§Y[?var_gui_prod_4_days]§!"
- PRODUCTION_START_4: "Początek"
+ PRODUCTION_START_4: "Stwórz"
  PRODUCTION_START_4_TT: "[!start_button_4_click_enabled]"
  PRODUCTION_TIME_4: "[?ROOT.days_mission_timeout@missile_construction_4|R0]"
  PRODUCTION_STOCKPILE_4: "[?ROOT.missile_inventory_array^var_gui_prod_4_missile_inventory_idx]"
@@ -271,7 +271,7 @@
  PRODUCTION_PRICE_5: "[?var_gui_prod_5_price_unit]\n§R[?var_gui_prod_5_price_total]§!"
  PRODUCTION_CIC_5: "[?prod_5_multiplier]"
  PRODUCTION_DURATION_5: "[?var_gui_prod_5_days_unit]\n§Y[?var_gui_prod_5_days]§!"
- PRODUCTION_START_5: "Początek"
+ PRODUCTION_START_5: "Stwórz"
  PRODUCTION_START_5_TT: "[!start_button_5_click_enabled]"
  PRODUCTION_TIME_5: "[?ROOT.days_mission_timeout@missile_construction_5|R0]"
  PRODUCTION_STOCKPILE_5: "[?ROOT.missile_inventory_array^var_gui_prod_5_missile_inventory_idx]"
@@ -280,7 +280,7 @@
  PRODUCTION_PRICE_6: "[?var_gui_prod_6_price_unit]\n§R[?var_gui_prod_6_price_total]§!"
  PRODUCTION_CIC_6: "[?prod_6_multiplier]"
  PRODUCTION_DURATION_6: "[?var_gui_prod_6_days_unit]\n§Y[?var_gui_prod_6_days]§!"
- PRODUCTION_START_6: "Początek"
+ PRODUCTION_START_6: "Stwórz"
  PRODUCTION_START_6_TT: "[!start_button_6_click_enabled]"
  PRODUCTION_TIME_6: "[?ROOT.days_mission_timeout@missile_construction_6|R0]"
  PRODUCTION_STOCKPILE_6: "[?ROOT.missile_inventory_array^var_gui_prod_6_missile_inventory_idx]"
@@ -289,7 +289,7 @@
  PRODUCTION_PRICE_7: "[?var_gui_prod_7_price_unit]\n§R[?var_gui_prod_7_price_total]§!"
  PRODUCTION_CIC_7: "[?prod_7_multiplier]"
  PRODUCTION_DURATION_7: "[?var_gui_prod_7_days_unit]\n§Y[?var_gui_prod_7_days]§!"
- PRODUCTION_START_7: "Początek"
+ PRODUCTION_START_7: "Stwórz"
  PRODUCTION_START_7_TT: "[!start_button_7_click_enabled]"
  PRODUCTION_TIME_7: "[?ROOT.days_mission_timeout@missile_construction_7|R0]"
  PRODUCTION_STOCKPILE_7: "[?ROOT.missile_inventory_array^var_gui_prod_7_missile_inventory_idx]"
@@ -298,7 +298,7 @@
  PRODUCTION_PRICE_8: "[?var_gui_prod_8_price_unit]\n§R[?var_gui_prod_8_price_total]§!"
  PRODUCTION_CIC_8: "[?prod_8_multiplier]"
  PRODUCTION_DURATION_8: "[?var_gui_prod_8_days_unit]\n§Y[?var_gui_prod_8_days]§!"
- PRODUCTION_START_8: "Początek"
+ PRODUCTION_START_8: "Stwórz"
  PRODUCTION_START_8_TT: "[!start_button_8_click_enabled]"
  PRODUCTION_TIME_8: "[?ROOT.days_mission_timeout@missile_construction_8|R0]"
  PRODUCTION_STOCKPILE_8: "[?ROOT.missile_inventory_array^var_gui_prod_8_missile_inventory_idx]"
@@ -307,7 +307,7 @@
  PRODUCTION_PRICE_9: "[?var_gui_prod_9_price_unit]\n§R[?var_gui_prod_9_price_total]§!"
  PRODUCTION_CIC_9: "[?prod_9_multiplier]"
  PRODUCTION_DURATION_9: "[?var_gui_prod_9_days_unit]\n§Y[?var_gui_prod_9_days]§!"
- PRODUCTION_START_9: "Początek"
+ PRODUCTION_START_9: "Stwórz"
  PRODUCTION_START_9_TT: "[!start_button_9_click_enabled]"
  PRODUCTION_TIME_9: "[?ROOT.days_mission_timeout@missile_construction_9|R0]"
  PRODUCTION_STOCKPILE_9: "[?ROOT.missile_inventory_array^var_gui_prod_9_missile_inventory_idx]"
@@ -316,7 +316,7 @@
  PRODUCTION_PRICE_10: "[?var_gui_prod_10_price_unit]\n§R[?var_gui_prod_10_price_total]§!"
  PRODUCTION_CIC_10: "[?prod_10_multiplier]"
  PRODUCTION_DURATION_10: "[?var_gui_prod_10_days_unit]\n§Y[?var_gui_prod_10_days]§!"
- PRODUCTION_START_10: "Początek"
+ PRODUCTION_START_10: "Stwórz"
  PRODUCTION_START_10_TT: "[!start_button_10_click_enabled]"
  PRODUCTION_TIME_10: "[?ROOT.days_mission_timeout@missile_construction_10|R0]"
  PRODUCTION_STOCKPILE_10: "[?ROOT.missile_inventory_array^var_gui_prod_10_missile_inventory_idx]"
@@ -325,7 +325,7 @@
  PRODUCTION_PRICE_11: "[?var_gui_prod_11_price_unit]\n§R[?var_gui_prod_11_price_total]§!"
  PRODUCTION_CIC_11: "[?prod_11_multiplier]"
  PRODUCTION_DURATION_11: "[?var_gui_prod_11_days_unit]\n§Y[?var_gui_prod_11_days]§!"
- PRODUCTION_START_11: "Początek"
+ PRODUCTION_START_11: "Stwórz"
  PRODUCTION_START_11_TT: "[!start_button_11_click_enabled]"
  PRODUCTION_TIME_11: "[?ROOT.days_mission_timeout@missile_construction_11|R0]"
  PRODUCTION_STOCKPILE_11: "[?ROOT.missile_inventory_array^var_gui_prod_11_missile_inventory_idx]"
@@ -334,7 +334,7 @@
  PRODUCTION_PRICE_12: "[?var_gui_prod_12_price_unit]\n§R[?var_gui_prod_12_price_total]§!"
  PRODUCTION_CIC_12: "[?prod_12_multiplier]"
  PRODUCTION_DURATION_12: "[?var_gui_prod_12_days_unit]\n§Y[?var_gui_prod_12_days]§!"
- PRODUCTION_START_12: "Początek"
+ PRODUCTION_START_12: "Stwórz"
  PRODUCTION_START_12_TT: "[!start_button_12_click_enabled]"
  PRODUCTION_TIME_12: "[?ROOT.days_mission_timeout@missile_construction_12|R0]"
  PRODUCTION_STOCKPILE_12: "[?ROOT.missile_inventory_array^var_gui_prod_12_missile_inventory_idx]"
@@ -343,7 +343,7 @@
  PRODUCTION_PRICE_13: "[?var_gui_prod_13_price_unit]\n§R[?var_gui_prod_13_price_total]§!"
  PRODUCTION_CIC_13: "[?prod_13_multiplier]"
  PRODUCTION_DURATION_13: "[?var_gui_prod_13_days_unit]\n§Y[?var_gui_prod_13_days]§!"
- PRODUCTION_START_13: "Początek"
+ PRODUCTION_START_13: "Stwórz"
  PRODUCTION_START_13_TT: "[!start_button_13_click_enabled]"
  PRODUCTION_TIME_13: "[?ROOT.days_mission_timeout@missile_construction_13|R0]"
  PRODUCTION_STOCKPILE_13: "[?ROOT.missile_inventory_array^var_gui_prod_13_missile_inventory_idx]"
