--- a/localisation/polish/MD_scripted_diplomatic_actions_l_polish.yml
+++ b/localisation/polish/MD_scripted_diplomatic_actions_l_polish.yml
@@ -3,7 +3,7 @@
  RECALL_VOLUNTEERS_ACTION_DESC: "W każdej chwili możemy zdecydować o odwołaniu naszych sił interwencyjnych."
  RECALL_VOLUNTEERS_TOOLTIP: "§Y[This.GetNameWithFlag]§! §Rmuszą mieć od nas aktywne siły interwencyjne, które możemy wycofać.§!"
  RECALL_VOLUNTEERS_TOOLTIP_G: "§Y[This.GetNameWithFlag]§! muszą mieć od nas aktywne siły interwencyjne, które możemy wycofać."
- RECALL_VOLUNTEERS_SEND_DESC: "Walka §Y[This.GetNameWithFlag]§! w którym się znajduje, nie jest już naszą walką. Nadszedł czas, abyśmy wycofali nasze siły z konfliktu.\n\n§YTa akcja wycofa nasze Siły Interwencyjne z §Y[This.GetNameWithFlag]§!"
+ RECALL_VOLUNTEERS_SEND_DESC: "Walka §Y[This.GetNameWithFlag]§! w którym się znajduje, nie jest już naszą walką. Nadszedł czas, abyśmy wycofali nasze siły z konfliktu.\n\n§YTa akcja wycofa nasze Siły Interwencyjne z [This.GetNameWithFlag]§!"
  base_trade_condition: "Podstawowa niechęć do umów handlowych"
  base_mutual_investment_treaty_condition: "Podstawowa niechęć do §YTraktatu o wzajemnym inwestowaniu§!"
  base_assume_debt_condition: "Podstawowa niechęć"
