--- a/localisation/polish/MD_techs_l_polish.yml
+++ b/localisation/polish/MD_techs_l_polish.yml
@@ -382,7 +382,7 @@
  wimax_desc: "Worldwide Interoperability for Microwave Access (WiMAX) to rodzina standardów bezprzewodowej komunikacji szerokopasmowej oparta na zestawie standardów IEEE 802.16."
  umts: "UMTS"
  umts_desc: "Uniwersalny System Telekomunikacji Ruchomej (UMTS) to mobilny system telefonii komórkowej trzeciej generacji dla sieci opartych na standardzie GSM. Opracowany i utrzymywany przez 3GPP, UMTS jest składnikiem standardu IMT-2000. Określa kompletny system sieciowy, który obejmuje sieć dostępu radiowego, sieć szkieletową oraz uwierzytelnianie użytkowników za pośrednictwem karty SIM. System ten wymaga większej liczby stacji bazowych i nowych przydziałów częstotliwości."
- edge: "KRAWĘDŹ"
+ edge: "EDGE"
  edge_desc: "W przeciwieństwie do UMTS, technologia Enhanced Data Rate for GSM Evolution (EDGE) nie wymaga nowych stacji bazowych ani nowych przydziałów częstotliwości. Dzięki wprowadzeniu wyrafinowanych metod kodowania i przesyłania danych, EDGE zapewnia wyższą przepływność na kanał radiowy. EDGE jest czasami nazywany 2,75G."
  hsupa: "HSDPA/HSUPA"
  hsupa_desc: "Szybki dostęp pakietowy łącza w górę (HSUPA) i szybki dostęp pakietowy łącza w dół (HSDPA) to połączenie dwóch protokołów mobilnych. Rozbudowują i poprawiają wydajność istniejących sieci telekomunikacji mobilnej 3G wykorzystujących protokoły WCDMA."
@@ -672,15 +672,15 @@
  BALLISTIC_MISSILES_TITLE_IRBM_DESC: "Pocisk balistyczny średniego zasięgu (IRBM) to pocisk balistyczny o zasięgu 1000–5000 km."
  BALLISTIC_MISSILES_TITLE_ICBM: "MIĘDZYKONTYNENTALNE\nRakiety balistyczne"
  BALLISTIC_MISSILES_TITLE_ICBM_DESC: "Międzykontynentalny pocisk balistyczny (ICBM) to pocisk o zasięgu co najmniej 6000 km, przeznaczony przede wszystkim do przenoszenia broni nuklearnej (przenoszący jedną lub więcej głowic termojądrowych)."
- BALLISTIC_MISSILES_TITLE_SLBM: "WYstrzeliwane z łodzi podwodnej\nrakiety balistyczne"
+ BALLISTIC_MISSILES_TITLE_SLBM: "Wystrzeliwane z łodzi podwodnej\nrakiety balistyczne"
  BALLISTIC_MISSILES_TITLE_SLBM_DESC: "Pocisk balistyczny wystrzeliwany z okrętu podwodnego (SLBM) to pocisk balistyczny, który można wystrzelić z okrętu podwodnego."
  CRUISE_MISSILES_TITLE_ALCM: "POCISKI\nTRANSFEROWE WYSTRZELANE Z POWIETRZA"
  CRUISE_MISSILES_TITLE_ALCM_DESC: "Pocisk manewrujący wystrzeliwany z powietrza (ALCM) to pocisk manewrujący wystrzeliwany z samolotu wojskowego."
  CRUISE_MISSILES_TITLE_HSCM: "HIPERSONICZNE\nRakiety rejsowe"
  CRUISE_MISSILES_TITLE_HSCM_DESC: "Pocisk manewrujący o prędkości hipersonicznej (HSCM) porusza się z co najmniej pięciokrotną prędkością dźwięku (5 Machów)"
- CRUISE_MISSILES_TITLE_GLCM: "WYstrzeliwane z ziemi\nrakiety przelotowe"
+ CRUISE_MISSILES_TITLE_GLCM: "Wystrzeliwane z ziemi\nrakiety przelotowe"
  CRUISE_MISSILES_TITLE_GLCM_DESC: "Wystrzeliwany z ziemi pocisk manewrujący (GLCM) to lądowy pocisk manewrujący."
- CRUISE_MISSILES_TITLE_SLCM: "WYstrzeliwane ze statku\nrakiety rejsowe"
+ CRUISE_MISSILES_TITLE_SLCM: "Wystrzeliwane ze statku\nrakiety rejsowe"
  CRUISE_MISSILES_TITLE_SLCM_DESC: "Pocisk manewrujący wystrzeliwany ze statku (SLCM) to morski pocisk manewrujący wystrzeliwany z okrętów nawodnych lub podwodnych."
  MISSILE_DEFENCE_TITLE_SAM: "POWIERZCHNIA-POWIETRZE\nPOCIĄGI"
  MISSILE_DEFENCE_TITLE_SAM_DESC: "Pocisk ziemia-powietrze (SAM) to pocisk przeznaczony do wystrzeliwania z ziemi w celu zniszczenia samolotów lub innych rakiet."
@@ -2269,7 +2269,7 @@
  CAT_operational_integrity_tree: "Drzewo integralności operacyjnej"
  CAT_operational_integrity: "Drzewo integralności operacyjnej"
  CAT_missile: "Wszystkie rakiety"
- CAT_icbm: "Międzykontynentalne rakiety balistyczne"
+ CAT_icbm: "Międzykontynentalne pociski balistyczne"
  CAT_irbm: "Pociski balistyczne średniego zasięgu"
  CAT_slbm: "Rakiety balistyczne wystrzeliwane z łodzi podwodnych"
  CAT_cm: "Wszystkie rakiety manewrujące"
