--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -2970,7 +2970,7 @@
  POL_Anti_Air_1: "RPG-76 „Komar”"
  POL_Anti_Air_1_short: "RPG-76 „Komar”"
  POL_Anti_Air_2: "PPZR Piorun"
- POL_Anti_Air_2_short: "Pioruń"
+ POL_Anti_Air_2_short: "Piorun"
  POL_Anti_Air_3: "PPZR Grom"
  POL_Anti_Air_3_short: "Grom"
  POL_Anti_Air_4: "PPZR Błyskawica"
