--- a/localisation/polish/loading_tips_l_polish.yml
+++ b/localisation/polish/loading_tips_l_polish.yml
@@ -1,7 +1,7 @@
 ﻿l_polish:
  LOADING_TIP_0: "Nigdy nie myśl, że wojna, bez względu na to, jak konieczna i uzasadniona, nie jest zbrodnią.\n – Ernest Hemingway –"
  LOADING_TIP_1: "Od 1932 roku w Tajlandii miało miejsce 12 wojskowych zamachów stanu, które zakończyły się sukcesem i 7, które zakończyły się niepowodzeniem. Tajlandia jest dziś dyktaturą wojskową."
- LOADING_TIP_2: "Od chwili powstania w 1825 r. w Boliwii miały miejsce 193 zamachy stanu i próby zamachu stanu. Ostatni miał miejsce w 1980 r."
+ LOADING_TIP_2: "Boliwia miała 193 zamachy stanu i próby zamachów stanu od czasu jej założenia w 1825 roku. Ostatni zamach miał miejsce w 1980 roku."
  LOADING_TIP_3: "Najstarszy nadal używany okręt podwodny ma ponad 70 lat. USS Cutlass wszedł do służby w 1945 r., a w 1973 r. został przekazany Tajwanowi, który zmienił jego nazwę na „Hai Shih”."
  LOADING_TIP_4: "ISIS było wcześniej oficjalną gałęzią Al-Kaidy w Iraku i powstało po inwazji Stanów Zjednoczonych w 2003 roku."
  LOADING_TIP_5: "Wczorajsi wrogowie to dzisiejsi rekruci. Szkoluj ich, aby walczyli u twojego boku i módl się, aby w końcu nie zdecydowali się cię za to znienawidzić.\n – Generał Sheperd –"
