--- a/localisation/polish/replace/replaced_from_focus_filter_tag_l_polish.yml
+++ b/localisation/polish/replace/replaced_from_focus_filter_tag_l_polish.yml
@@ -106,3 +106,8 @@
  FOCUS_FILTER_UKRAINE_REGIONS: "Partia Regionów"
  FOCUS_FILTER_UKRAINE_SERVANT: "Sługa Ludu"
  FOCUS_FILTER_UKRAINE_POROH: "Europejska Solidarność"
+ FOCUS_FILTER_ISRFOREIGNPOL: "Polityka Zagraniczna Izraela"
+ FOCUS_FILTER_ISRMILITARY: "Tzahal-IDF"
+ FOCUS_FILTER_ISRPALSTUFF: "Izrael-Palestyna"
+ FOCUS_FILTER_ISRPOLICE: "Mišteret Yisra'el"
+ FOCUS_FILTER_ISRECON: "Gospodarka Izraela"
