--- a/localisation/simp_chinese/MD_AC_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_AC_l_simp_chinese.yml
@@ -135,7 +135,7 @@
  AC_standby_project: "分析"
  AC_standby_project_desc: "[THIS.GetName]正在分析我们的要求"
  AC_build_button_tt: "[AC_GetBuildButtonTT]"
- AC_build_button_tt_1: "投资建设项目将增加您对目标国家的影响力，并为您的国家提供投资收益，从而增加您的总收入。\n\n§Y一次最多可以建立五个每种类型的建设项目。 国家的腐败程度和国家的基础设施水平都会影响总的建设时间。 不管使用哪种修正，默认会增加10％的建造时间。§!\n\n§L如果目标国家接受您的投资要约，则在建设期结束时，他们将获得基础设施/建筑物。 您将获得投资收益。§!\n\n[investment_cooldown]"
+ AC_build_button_tt_1: "投资建设项目将增加您对目标国家的影响力，并为您的国家提供投资收益，从而增加您的总收入。\n\n§Y一次最多可以建立五个每种类型的建设项目。 国家的腐败程度和国家的基础设施水平都会影响总的建设时间。 不管使用哪种修正，默认会增加35％的建造时间。§!\n\n§L如果目标国家接受您的投资要约，则在建设期结束时，他们将获得基础设施/建筑物。 您将获得投资收益。§!\n如果目标国家存在经济问题或其国内影响力太低，AI将拒绝投资。\n\n[investment_cooldown]"
  AC_build_button_tt_delayed: "§Y前提条件：§!\n[!AC_build_button_click_enabled]"
  AC_14_cooldown_tt: "如果这个国家接受了它，将出现一个14天的计时器，自接受它开始。在这段冷却时间内，无论你向这个国家投入多少钱，你都不会获得更多的影响力。"
  AC_30_cooldown_tt: "如果这个国家接受了它，将出现一个30天的计时器，自接受它开始。在这段冷却时间内，无论你向这个国家投入多少钱，你都不会获得更多的影响力。"
