--- a/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_custom_achievements_l_simp_chinese.yml
@@ -196,7 +196,7 @@
  chiraq_NAME: "芝拉克"
  chiraq_DESC: "作为伊拉克控制伊利诺伊州（芝拉克）"
  africa_paradis_NAME: "非洲天堂"
- africa_paradis_DESC: "作为一个非洲国家，成立了非洲合众国，其GDP比任何欧洲国家都要高。"
+ africa_paradis_DESC: "作为一个非洲国家，成立非洲合众国，其GDP比任何欧洲国家都要高。"
  africa_paradis_usa_tt: "已成立非洲合众国"
  africa_paradis_gdp_tt: "我们的GDP高于任何欧洲国家"
  libya_order_of_republic_NAME: "利比亚共和国勋章"
@@ -211,7 +211,7 @@
  libya_good_gaddafi_DESC: "以卡扎菲统治民主的利比亚。"
  libya_bad_gaddafi_NAME: "卡扎菲？更像坏扎菲"
  libya_bad_gaddafi_DESC: "以卡扎菲使利比亚解体。"
- libya_no_gods_or_kings_NAME: "没有神仙皇帝，只有人"
+ libya_no_gods_or_kings_NAME: "无神无王，唯有凡人"
  libya_no_gods_or_kings_DESC: "作为穆阿迈尔·卡扎菲，不走寻常路。选择不可能。选择狂喜。"
  libya_no_gods_or_kings_tt: "穆阿迈尔·卡扎菲拒绝§Y三个回答§!"
  libya_f_is_for_family_NAME: "福是全家福的福"
