--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -492,7 +492,7 @@
  bankruptcy.214.a: "该死"
  bankruptcy.214.b: "发起反击"
  bankruptcy.215.t: "[oligarchism_L]政客批评政府开支"
- bankruptcy.215.d: "“政府把我们所有宝贵的税款都花在无聊的事情上。他们应该收紧预算，优先考虑支持地方企业的支出。我这么说并不是因为我自己是一个合法的商人，而是因为我的朋友和选民也是合法的商人……”\n\n在一次商业会议上，一位[oligarchism_L_L]政治家的言论受到了人群的欢呼。我们糟糕的财政状况成为反对党争取支持的完美工具。"
+ bankruptcy.215.d: "“政府把我们所有宝贵的税款都花在无聊的事情上。他们应该收紧预算，优先考虑支持地方企业的支出。我这么说并不是因为我自己是一个合法的商人，而是因为我的朋友和选民也是合法的商人……”\n\n在一次商业会议上，一位[oligarchism_L]政治家的言论受到了人群的欢呼。我们糟糕的财政状况成为反对党争取支持的完美工具。"
  bankruptcy.215.a: "该死"
  bankruptcy.215.b: "发起反击"
  bankruptcy.216.t: "[Neutral_Libertarian_L]政客批评政府开支"
@@ -655,7 +655,7 @@
  FRA_cfa_franc_custodian_TT: "$$[?additional_income_FRA_cfa_franc_custodian|+3]来自于§Y非洲金融共同体法郎托管人§!\n"
  FRA_idea_nepad_modifier_expense_tt: "$$[?FRA.FRA_nepad_sponsor_weekly_cost|-3]来自于§Y非洲发展新伙伴关系项目赞助人§!"
  total_agriculture_district_amount_tt: "这个数字代表了我们国家的§Y商业化农业区§!的总数量。"
- total_agriculture_district_amount_tt_delayed: "§Y商业化农业区§!是我国所有非自给性农业的总称。它包括农业工业、耕地、粮仓、屠宰场等。\n\n为所属地区提供：\n所需工人基础数量：§Y200K§!\n每个§Y商业化农业区§!的基本GDP产出：$§Y25B§!\n基础能源消耗：§R-0.10§! GW\n地区§Y燃料获取§!：10\n§Y当地补给能力§!：1.5%\n"
+ total_agriculture_district_amount_tt_delayed: "§Y商业化农业区§!是我国所有非自给性农业的总称。它包括农业工业、耕地、粮仓、屠宰场等。\n\n为所属地区提供：\n所需工人基础数量：§Y250K§!\n每个§Y商业化农业区§!的基本GDP产出：$§Y25B§!\n基础能源消耗：§R-0.10§! GW\n地区§Y燃料获取§!：8\n§Y当地补给能力§!：1.5%\n"
  defence_industry_subsidies: "$$[?defence_industry_subsidies|-3]来自§Y$defense_industry$§!补贴(剩余天数：[?defence_industry_subsidies:days_left|Y0]）\n"
  SOV_kal_with_income_loc: "$$[?additional_income_SOV_kal_with|+3]来自于§Y钾肥贸易§!\n"
  UNEMPLOYMENT_THRESHOLD_RATE: "[?ROOT.unemployment_threshold_display_var|%Y]"
