--- a/localisation/simp_chinese/MD_scripted_diplomatic_actions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_scripted_diplomatic_actions_l_simp_chinese.yml
@@ -3,7 +3,7 @@
  RECALL_VOLUNTEERS_ACTION_DESC: "我们可以立刻选择召回我们的干涉部队。"
  RECALL_VOLUNTEERS_TOOLTIP: "§Y[This.GetNameWithFlag]§!§R必须拥有积极的干涉影响力我们才可以撤军。§!"
  RECALL_VOLUNTEERS_TOOLTIP_G: "§Y[This.GetNameWithFlag]§!必须拥有积极的干涉影响力我们才可以撤军。"
- RECALL_VOLUNTEERS_SEND_DESC: "§Y[This.GetNameWithFlag]§!已不再是我们的战斗。现在是时候从冲突中撤出我们的部队了。\n\n§Y这一行动将使我们的干预部队从§Y[This.GetNameWithFlag]§!撤出。"
+ RECALL_VOLUNTEERS_SEND_DESC: "§Y[This.GetNameWithFlag]§!已不再是我们的战斗。现在是时候从冲突中撤出我们的部队了。\n\n§Y这一行动将使我们的干预部队从[This.GetNameWithFlag]撤出。§!"
  base_trade_condition: "对§Y贸易协定§!的基本支持度"
  condition_two: "政体导致的支持度"
  condition_three: "两国关系导致的支持率"
