--- a/localisation/simp_chinese/replace/replaced_from_focus_filter_tag_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_focus_filter_tag_l_simp_chinese.yml
@@ -106,3 +106,8 @@
  FOCUS_FILTER_UKRAINE_REGIONS: "地区党"
  FOCUS_FILTER_UKRAINE_SERVANT: "人民公仆"
  FOCUS_FILTER_UKRAINE_POROH: "欧洲团结党"
+ FOCUS_FILTER_ISRFOREIGNPOL: "以色列的外交政策"
+ FOCUS_FILTER_ISRMILITARY: "以色列国防军"
+ FOCUS_FILTER_ISRPALSTUFF: "以色列-巴勒斯坦"
+ FOCUS_FILTER_ISRPOLICE: "以色列警务"
+ FOCUS_FILTER_ISRECON: "以色列经济"
