--- a/localisation/french/MD_autonomy_l_french.yml
+++ b/localisation/french/MD_autonomy_l_french.yml
@@ -32,12 +32,12 @@
  autonomy_uar_province: "Province"
  autonomy_uar_regional_command: "Commandement régional"
  subject_hates: "Opinion du suzerain: haine"
- subject_hates_desc: "[Root.GetLeLaLNPCap] [Root.GetName] [ROOT.GetAOntNP] une haine profonde envers [ROOT.GetSonLeurNP] suzerain. Il est probable que le gouvernement commence bientôt un soulèvement violent à moins que la situation ne soit réparée."
+ subject_hates_desc: "[Root.GetNameDef] a une profonde haine envers son suzerain. Il est probable qu’ils déclencheront bientôt un soulèvement violent si la situation n’est pas améliorée."
  subject_negative: "Opinion du suzerain: pas aimé"
- subject_negative_desc: "[Root.GetLeLaLNPCap] [Root.GetName] n'aime[ROOT.GetEEntNP] pas [ROOT.GetSonLeurNP] suzerain. La relation négative signifie que le gouvernement va plus travailler pour une plus grande autonomie."
+ subject_negative_desc: "[Root.GetNameDef] n'aime pas leur suzerain. La relation négative signifiera qu’ils travailleront plus dur vers une plus grande autonomie."
  subject_neutral: "Opinion du suzerain: neutre"
- subject_neutral_desc: "[Root.GetLeLaLNPCap] [Root.GetName] [ROOT.GetAOntNP] une attitude neutre envers [ROOT.GetSonLeurNP] suzerain. Cela peut devenir positif ou négatif en fonction d'événements mondiaux et des actions de [ROOT.GetSonLeurNP] suzerain."
+ subject_neutral_desc: "[Root.GetNameDef] a une attitude neutre envers son suzerain. Cela peut devenir positif ou négatif en fonction des événements mondiaux et des actions de leur suzerain."
  subject_positive: "Opinion du suzerain: positive"
- subject_positive_desc: "[Root.GetLeLaLNPCap] [Root.GetName] [ROOT.GetAOntNP] une attitude positive envers [ROOT.GetSonLeurNP] suzerain. La relation positive entre les deux pays signifie que le gouvernement n'est pas désireux de viser une plus grande autonomie."
+ subject_positive_desc: "[Root.GetNameDef] a une attitude positive envers son suzerain. Les relations positives entre les deux pays signifient que les gens ne sont pas si désireux de viser une plus grande autonomie."
  subject_loves: "Opinion du suzerain: adoré"
- subject_loves_desc: "[Root.GetLeLaLNPCap] [Root.GetName] aim[ROOT.GetEEntNP] absolument [ROOT.GetSonLeurNP] suzerain et le gouvernement veut pratiquement être avec eux pour toujours. Pour l'instant."
+ subject_loves_desc: "[Root.GetNameDef] adore son suzerain. Ils veulent pratiquement être avec eux pour toujours. Pour l'instant."
