--- a/localisation/french/MD_focus_BUL_l_french.yml
+++ b/localisation/french/MD_focus_BUL_l_french.yml
@@ -1,7 +1,7 @@
 ﻿l_french:
  bulgaria_focus: "Priorités nationales bulgare"
  WHILE_FOCUSING: "While focusing on this, there will be the following effects:\n$EFF$"
- BUL_generic_political_effort: "Bulgarian Politics"
+ BUL_generic_political_effort: "Politiques bulgares"
  BUL_generic_political_effort_desc: "In the year 2000, Bulgaria's political scene saw a dramatic shift as the conservative party, Union of Democratic Forces (UDF), lost power to the opposition Bulgarian Socialist Party (BSP). This marked the end of UDF's eight-year rule and the beginning of BSP's term in office. The new government prioritized economic reforms, focusing on improving the country's financial stability and attracting foreign investment. Despite initial public approval, the reforms proved to be slow and controversial."
  BUL_steady: "Continue the course"
  BUL_steady_desc: "Bulgaria has achieved a lot since the fall of communism in 1989, including the establishment of a democratic government. Nevertheless, there have been recent discussions about the need to shift back to a more authoritarian government. However, there are several reasons why Bulgaria should continue to remain a democracy to truly embrace the economic growth and freedom of our people."
@@ -9,9 +9,9 @@
  BUL_generic_extra_tech_slot_desc: "Bulgaria's economy has struggled to grow since the fall of communism, and its government has been exploring ways to increase economic growth. One potential solution is to increase the privatization of property in the country. Privatization can potentially lead to increased efficiency, as private companies tend to be more profit-oriented and incentivized to cut costs. This, in turn, could attract foreign investments and create jobs. Additionally, increasing privatization can reduce the government's financial burden as they will no longer have to maintain and manage the properties."
  BUL_generic_extra_tech_slot_3: "Healthcare Reform"
  BUL_generic_extra_tech_slot_3_desc: "As Bulgaria entered the new millennium, there was a pressing need for healthcare reform. The countrys healthcare system was outdated and insufficient, with many hospitals lacking the necessary equipment and staff. Patients often faced lengthy wait times and inadequate care, leading to frustration and dissatisfaction with the system. We need to reform the system and improve the well-being of our people."
- BUL_nato_joining: "Joining NATO"
+ BUL_nato_joining: "Rejoindre l'OTAN"
  BUL_nato_joining_desc: "Bulgaria's potential membership in NATO is a topic of significant debate. On one hand, joining NATO would provide Bulgaria with the security guarantees and protection against potential external threats. It would also give the country access to NATO's extensive resources, including military training and assistance, intelligence sharing, and advanced technology. Additionally, membership in NATO would bolster Bulgaria's position and standing within the international community."
- BUL_fighting_immigration: "Crush the Opposition"
+ BUL_fighting_immigration: "Ecraser l'opposition"
  BUL_fighting_immigration_desc: "Ultimately, the Bulgarian governments actions should effectively silence the opposition and consolidate power in the hands of the ruling party for years to come. While the country has since made progress towards greater democracy and freedom of expression, the events of political chaos should remain a stark reminder of how easily those gains can be reversed."
  BUL_elitism_question: "Elitism questions"
  BUL_elitism_question_desc: "Based on urgent needs, we should try to improve the well-being of our health care system in order to create conditions for all sections of society to receive medical care."
