--- a/localisation/french/MD_focus_EU_POTEF_l_french.yml
+++ b/localisation/french/MD_focus_EU_POTEF_l_french.yml
@@ -34,11 +34,11 @@
  POTEF202: "L'Empire de la liberté"
  POTEF202_desc: "La Fédération européenne deviendra un empire de la liberté."
  POTEF203: "L'Amérique : alliée ou adversaire"
- POTEF203_desc: "L'Amérique et l'Europe ont été alliées pendant la majeure partie du 20ème siècle. Avec les récents changements politiques [USA.GetAuEnANP] §Y[USA.GetFlag][USA.GetName]§!, cela a été remis en question..."
+ POTEF203_desc: "L’Amérique et l’Europe ont été alliées pendant la majeure partie du XXe siècle. Avec les récents changements politiques dans §Y[USA.GetNameWithFlag]§! cela a été remis en question…"
  POTEF204: "L'héritage de l'OTAN"
  POTEF204_desc: "Dans la tradition de l'héritage de maintien de la paix de l'OTAN, §Y[USA.GetNameWithFlag]§! et l'§YUED§! forment une nouvelle alliance."
  POTEF205: "L'héritage de Trump"
- POTEF205_desc: "§Y[USA.GetNameWithFlag]§! [USA.GetEstSontNP] passé[USA.GetXENP][USA.GetXSNP] du statut d'allié[USA.GetXENP][USA.GetXSNP] à celui d'adversaire[USA.GetXSNP]. L'Europe doit réagir à ce changement stratégique décisif."
+ POTEF205_desc: "§Y[USA.GetNameWithFlag]§! est passé d’allié à adversaire. L’Europe doit réagir à ce changement stratégique décisif."
  POTEF206: "Briser le mur"
  POTEF206_desc: "Pour contrer la menace américaine sur la souveraineté européenne, l'état-major de l'§YUED§! a élaboré un plan pour s'allier avec §Y[MEX.GetNameWithFlag]§! et envahir §Y[USA.GetNameWithFlag]§! par le Sud."
  POTEF207: "La résurrection de Buster"
@@ -96,7 +96,7 @@
  POTEF451: "Afrique du Nord"
  POTEF451_desc: "Pour créer une zone de convergence et un havre de sécurité pour les réfugiés, la Fédération européenne doit améliorer ses relations avec l'Afrique du Nord et y construire de nouveaux avant-postes stratégiques."
  POTEF452: "Unité Chypriote"
- POTEF452_desc: "En tant qu'État membre souverain de la Fédération européenne, §Y[CYP.GetNameWithFlag]§! doit être réunifié[CYP.GetXENP]."
+ POTEF452_desc: "En tant qu'État membre souverain de la Fédération européenne §Y[CYP.GetNameWithFlag]§! il faut les réunir."
  POTEF500: "Doctrine des Balkans"
  POTEF500_desc: "Les §Ypays des Balkans§! se sont traditionnellement concentrés sur les forces partisanes. Avec la doctrine partisane, tous les États membres peuvent adopter cette tradition et ces tactiques."
  POTEF501: "Infrastructure des Balkans"
@@ -104,9 +104,9 @@
  POTEF502: "Contester la route de la soie"
  POTEF502_desc: "La Fédération européenne doit contester la nouvelle route de la soie de la Chine et réduire l'influence chinoise en Asie centrale."
  POTEF503: "Chine concurrente"
- POTEF503_desc: "§Y[CHI.GetNameWithFlag]§! [CHI.GetEstSontNP] devenu[CHI.GetXENP][CHI.GetXSNP] l'un des principaux représentants de la Fédération européenne au niveau mondial. La Fédération européenne doit adapter ses politiques à cette situation."
+ POTEF503_desc: "§Y[CHI.GetNameWithFlag]§! est devenue l'un des principaux concurrents de la Fédération européenne au niveau mondial. La Fédération européenne doit adapter ses politiques à cela."
  POTEF504: "Opération Arrow"
- POTEF504_desc: "Nommée d'après la seconde guerre de l'opium (deuxième guerre anglo-chinoise, l'« Arrow War »), l'opération Arrow est un plan d'intervention européen [CHI.GetAuEnANP] §Y[CHI.GetFlag][CHI.GetName]§! pour arrêter la politique d'expansion chinoise."
+ POTEF504_desc: "Nommée d'après la Arrow War (deuxième guerre anglo-chinoise), l'opération Arrow est un plan d'intervention européenne en §Y[CHI.GetNameWithFlag]§! pour arrêter la politique d’expansion chinoise."
  POTEF505: "Alliés asiatiques"
  POTEF505_desc: "Pour affronter §Y[CHI.GetNameWithFlag]§!, la Fédération européenne a besoin d'alliés en Asie."
  POTEF506: "République de Corée"
@@ -118,9 +118,9 @@
  POTEF551: "Protéger la mer Noire"
  POTEF551_desc: "La mer Noire est le point de jonction de la Fédération européenne avec le Caucase et ses États membres du sud-est. Elle doit donc être sécurisée."
  POTEF552: "Réintégrer les républiques sécessionnistes"
- POTEF552_desc: "§Y[SOV.GetNameWithFlag]§! [SOV.GetAOntNP] violé la souveraineté de divers États membres orientaux de la Fédération européenne en soutenant des mouvements séparatistes et en créant des républiques sécessionnistes. Nous devons réintégrer ces fantoches russes."
+ POTEF552_desc: "§Y[SOV.GetNameWithFlag]§! a violé la souveraineté de divers États membres orientaux de la Fédération européenne en soutenant des mouvements séparatistes et en créant des républiques séparatistes. Nous devons réintégrer ces serviteurs russes."
  POTEF553: "La Russie rivale"
- POTEF553_desc: "§Y[SOV.GetNameWithFlag]§! [SOV.GetEstSontNP] devenu[SOV.GetXENP][SOV.GetXSNP] un grand rival de la Fédération européenne. Nous devons leur imposer des sanctions."
+ POTEF553_desc: "§Y[SOV.GetNameWithFlag]§! est devenu un rival majeur de la Fédération européenne. Nous devons leur imposer des sanctions."
  POTEF554: "Opération Charlemagne"
  POTEF554_desc: "Nommée d'après Charlemagne, l'empereur légendaire et soi-disant « Père de l'Europe » (Pater Europae), l'opération Charlemagne est un plan d'autodéfense préventive contre §Y[SOV.GetNameWithFlag]§!. Avec cette opération, l'§YUED§! peut lancer une invasion préventive sur §Y[SOV.GetNameWithFlag]§! pour éliminer cette menace à la souveraineté européenne."
  POTEF600: "Doctrine du Caucase"
@@ -132,7 +132,7 @@
  POTEF651: "Réseau européen de défense aérienne"
  POTEF651_desc: "La Fédération européenne doit construire un réseau de défense aérienne pour sécuriser son flanc oriental."
  POTEF652: "Pare-feu oriental"
- POTEF652_desc: "L'influence croissante [SOV.GetDuDelaDelNP] §Y[SOV.GetFlag][SOV.GetName]§! dans les États membres de l'Est doit être contrée."
+ POTEF652_desc: "L'influence croissante de §Y[SOV.GetNameWithFlag]§! dans les États membres de l’Est doivent être combattus."
  POTEF700: "Doctrine balte"
  POTEF700_desc: "Les §Ypays baltes§! se sont traditionnellement concentrés sur des forces spéciales de petite taille et très performantes. Avec la doctrine des forces spéciales, tous les États membres peuvent adopter cette tradition et ces tactiques."
  POTEF701: "Protéger la mer Baltique"
@@ -220,11 +220,11 @@
  EU_POTEF_environmental_imperialism_restructure_industry_decision: "Reconstruction de l'énergie verte"
  EU_POTEF_environmental_imperialism_restructure_industry_decision_desc: "Pour répondre aux exigences de la §Gréforme environnementale§! européenne, nous devons reconstruire une partie de notre §Cindustrie civile§! pour en faire un producteur d'énergie renouvelable (§Yraffinerie de biocarburant§!)."
  EU_POTEF_break_environmental_sanctions_decision: "Briser les sanctions environnementales"
- EU_POTEF_break_environmental_sanctions_decision_desc: "L'Europe nous a imposé des sanctions environnementales. Nous devons les briser par tous les moyens - politiques et militaires. Mais cela donnera [FROM.GetAuAlaAlNP] [FROM.GetFlag][FROM.GetName] un objectif de guerre contre nous. Nous devons donc nous allier à d'autres pays sanctionnés par [FROM.GetNameWithFlag]."
+ EU_POTEF_break_environmental_sanctions_decision_desc: "L’Europe nous a imposé des sanctions environnementales. Nous devons les briser par tous les moyens – politiques et militaires. Mais cela donnera à [FROM.GetNameWithFlag] un objectif de guerre contre nous. Nous devons donc nous allier avec d’autres pays sanctionnés par [FROM.GetNameWithFlag]."
  EU_POTEF_call_all_major_non_EU_ally: "Appeler tous les alliés majeurs non-membre de l'UE"
  EU_POTEF_call_all_major_non_EU_ally_desc: "L'UED est attaquée. Il est temps d'activer l'alliance défensive et d'appeler tous les alliés majeurs non-membre de l'UE."
  EU_POTEF_call_major_non_EU_ally: "Appeler [FROM.GetNameDef]"
- EU_POTEF_call_major_non_EU_ally_desc: "Appeler §Y[FROM.GetNameWithFlag]§!, allié[FROM.GetXENP][FROM.GetXSNP] majeur[FROM.GetXENP][FROM.GetXSNP] non-membre[FROM.GetXSNP] de l'UE."
+ EU_POTEF_call_major_non_EU_ally_desc: "Appelez le principal allié EDU non-UE §Y[FROM.GetNameWithFlag]§!."
  tooltip_POTEF_bonus_effect: "(Remarque : les effets ne sont indiqués que pour les États membres actuels de l'UE)\n§GEffet bonus§! :"
  tooltip_POTEF_is_alpine: "si §Y[AUS.GetNameWithFlag]§! ou §Y[SWI.GetNameWithFlag]§! est §YPrésident de la Fédération européenne (PFE)§!."
  tooltip_POTEF_is_german: "si §Y[GER.GetNameWithFlag]§! est §YPrésident de la Fédération européenne (PFE)§!."
@@ -240,7 +240,7 @@
  tooltip_POTEF_is_visegrad: "si §Y[POL.GetNameWithFlag]§!, §Y[CZE.GetNameWithFlag]§!, §Y[SLO.GetNameWithFlag]§!, §Y[HUN.GetNameWithFlag]§! ou §Y[BLR.GetNameWithFlag]§! est §YPrésident de la Fédération européenne (PFE)§!."
  tooltip_POTEF_is_baltic: "si §Y[EST.GetNameWithFlag]§!, §Y[LAT.GetNameWithFlag]§! ou §Y[LIT.GetNameWithFlag]§! est §YPrésident de la Fédération européenne (PFE)§!."
  focus_POTEF301_effect_tt: "Chaque membre de l'Union européenne va §Gaméliorer son opinion de +25§! avec tous les pays latins.\n"
- focus_POTEF502_effect_tt: "Chaque membre de l'Union européenne va §Gaméliorer son opinion de +30§! avec les pays suivants : [KAZ.GetNameWithFlag], [KYR.GetNameWithFlag], [TAJ.GetNameWithFlag], [UZB.GetNameWithFlag], [TRK.GetNameWithFlag], [PER.GetNameWithFlag], [TUR.GetNameWithFlag], [GRE.GetNameWithFlag].\nDe plus, l'influence [CHI.GetFlag][CHI.GetAdjFS] va §Gdiminuer§! dans ces pays.\n"
+ focus_POTEF502_effect_tt: "Chaque membre de l'Union européenne §Gaméliorera son opinion de +30§! avec les pays suivants : [KAZ.GetNameWithFlag], [KYR.GetNameWithFlag], [TAJ.GetNameWithFlag], [UZB.GetNameWithFlag], [TRK.GetNameWithFlag], [PER.GetNameWithFlag], [TUR.GetNameWithFlag], [GRE.GetNameWithFlag].\nDe plus, l'influence de [CHI.GetFlag][CHI.GetAdjective] sera §Gdiminuée§! dans ces pays.\n"
  tooltip_focus_POTEF203_trigger: "Est dans la faction §YUnion européenne de la défense§!"
  tooltip_focus_POTEF205_trigger: "Parti au pouvoir : [USA.conservatism_L]"
  tooltip_focus_POTEF206_trigger: "La priorité §YMexique§! a été achevée."
@@ -263,25 +263,25 @@
  EU_POTEF_show_election_polls_desc: "Afficher les sondages pour la prochaine élection du président de la Fédération européenne (PFE)."
  EU_POTEF_hide_election_polls: "Cacher les sondages électoraux du PFE"
  EU_POTEF_hide_election_polls_desc: "Cacher les sondages pour la prochaine élection du président de la Fédération européenne (PFE)."
- EU_POTEF_campaign_in_member_state: "Campagne électorale du PFE [FROM.GetAuEnANP] [FROM.GetName]."
- EU_POTEF_campaign_in_member_state_desc: "[ROOT.GetLeader] va lancer une campagne électorale du PFE [FROM.GetAuEnANP] [FROM.GetFlag][FROM.GetName]."
+ EU_POTEF_campaign_in_member_state: "Campagne électorale du POTEF dans [FROM.GetName]"
+ EU_POTEF_campaign_in_member_state_desc: "[ROOT.GetLeader] lancera une campagne électorale POTEF dans [FROM.GetNameWithFlag]."
  EU_POTEF_test_elect_desc: "[EU_POTEF_Western_Autocracy_nominee]\n[EU_POTEF_conservatism_nominee]\n[EU_POTEF_liberalism_nominee]\n[EU_POTEF_socialism_nominee]\n[EU_POTEF_Communist-State_nominee]\n[EU_POTEF_anarchist_communism_nominee]\n[EU_POTEF_Conservative_nominee]\n[EU_POTEF_Autocracy_nominee]\n[EU_POTEF_Mod_Vilayat_e_Faqih_nominee]\n[EU_POTEF_Vilayat_e_Faqih_nominee]\n[EU_POTEF_Kingdom_nominee]\n[EU_POTEF_Caliphate_nominee]\n[EU_POTEF_Neutral_Muslim_Brotherhood_nominee]\n[EU_POTEF_Neutral_Autocracy_nominee]\n[EU_POTEF_Neutral_conservatism_nominee]\n[EU_POTEF_oligarchism_nominee]\n[EU_POTEF_Neutral_Libertarian_nominee]\n[EU_POTEF_Neutral_green_nominee]\n[EU_POTEF_neutral_Social_nominee]\n[EU_POTEF_Neutral_Communism_nominee]\n[EU_POTEF_Nat_Populism_nominee]\n[EU_POTEF_Nat_Fascism_nominee]\n[EU_POTEF_Nat_Autocracy_nominee]\n[EU_POTEF_Monarchist_nominee]\n"
  EU_POTEF_news.1.t: "[FROM.GetLeader] est candidat à l'élection du PFE"
- EU_POTEF_news.1.d: "Le dirigeant [FROM.GetDuDelaDelNP] [FROM.GetFlag][FROM.GetName], [FROM.GetLeader], a été déclaré candidat à l'élection du président de la Fédération européenne (PFE)."
+ EU_POTEF_news.1.d: "[FROM.GetLeader], leader de [FROM.GetNameWithFlag], a été déclaré candidat aux élections à la présidence de la Fédération européenne (POTEF)."
  EU_POTEF_news.1.a: "D'accord."
  EU_POTEF_news.2.t: "Résultat de l'élection du PFE de [GetYear]"
- EU_POTEF_news.2.d: "Le dirigeant [FROM.GetDuDelaDelNP] [FROM.GetFlag][FROM.GetName], [FROM.GetLeader], a remporté l'élection du président de la Fédération européenne (PFE). En tant que PFE, [FROM.GetLeader] dirigera la Fédération européenne pour les prochaines [?FROM.POTEF_years|0] années."
+ EU_POTEF_news.2.d: "Le leader de [FROM.GetNameWithFlag] [FROM.GetLeader] a remporté les élections à la présidence de la Fédération européenne (POTEF). En tant que POTEF, [FROM.GetLeader] dirigera la Fédération européenne pour les [?FROM.POTEF_years|0] année(s)."
  EU_POTEF_news.2.a: "D'accord."
- EU_POTEF_news.5.t: "La campagne pour [FROM.GetLeader] [FROM.FROM.GetAuEnANP] [FROM.FROM.GetName] a réussi"
- EU_POTEF_news.5.d: "[FROM.GetLeader] a fait campagne avec succès [FROM.FROM.GetAuEnANP] [FROM.FROM.GetFlag][FROM.FROM.GetName] pour l'élection du président de la Fédération européenne (PFE)."
+ EU_POTEF_news.5.t: "La campagne [FROM.GetLeader] dans [FROM.FROM.GetName] a réussi"
+ EU_POTEF_news.5.d: "[FROM.GetLeader] a fait campagne avec succès lors des élections [FROM.FROM.GetNameWithFlag] pour le président de la Fédération européenne (POTEF)."
  EU_POTEF_news.5.a: "D'accord."
- EU_POTEF_news.6.t: "La campagne pour [FROM.GetLeader] [FROM.FROM.GetAuEnANP] [FROM.FROM.GetName] n'a pas abouti"
- EU_POTEF_news.6.d: "[FROM.GetLeader] a fait campagne sans succès [FROM.FROM.GetAuEnANP] [FROM.FROM.GetFlag][FROM.FROM.GetName] pour l'élection du président de la Fédération européenne (PFE)."
+ EU_POTEF_news.6.t: "La campagne [FROM.GetLeader] dans [FROM.FROM.GetName] a échoué"
+ EU_POTEF_news.6.d: "[FROM.GetLeader] a fait campagne sans succès lors des élections [FROM.FROM.GetNameWithFlag] à la présidence de la Fédération européenne (POTEF)."
  EU_POTEF_news.6.a: "D'accord."
  EU_POTEF_trigger_test_1_desc: "[POTEF_polls_loc]"
  tooltip_EU_POTEF_nominee_trigger: "[ROOT.GetNameWithFlag] est l'un des trois pays les plus influents dans tous les États membres ayant le même parti au pouvoir."
  tooltip_EU_POTEF_nominee_trigger_2: "Le parti de [ROOT.GetLeader] n'a §YPAS déclaré de candidat§! pour l'élection du président de la Fédération européenne (PFE)."
- tooltip_EU_POTEF_campaign_in_member_state_effect: "Chance d'augmenter la popularité du groupe politique soutenant [ROOT.GetLeader] d'environ 5% [FROM.GetAuEnANP] [FROM.GetFlag][FROM.GetName]. Les chances dépendent de l'§Yinfluence§! [ROOT.GetDuDelaDelNP] [ROOT.GetFlag][ROOT.GetName] [FROM.GetAuEnANP] [FROM.GetFlag][FROM.GetName], de l'§Yeuroscepticisme§!, du §Yparti au pouvoir§! et du §Ycandidat pour être PFE§! [FROM.GetDuDelaDelNP] [FROM.GetFlag][FROM.GetName]."
+ tooltip_EU_POTEF_campaign_in_member_state_effect: "Chance d'augmenter la popularité du groupe politique soutenant [ROOT.GetLeader] d'environ 5 % dans [FROM.GetNameWithFlag]. La chance dépend de la §Yinfluence§! de [ROOT.GetNameWithFlag] sur [FROM.GetNameWithFlag], §YEuroscepticism§!, le §Yruling party§! et le §YCandidat POTEF§! de [FROM.GetNameWithFlag]."
  show_POTEF_polls_loc_key: "Sondages pour le PFE :\nMandat à la majorité :\n§YMandat de 5 ans§! : majorité §Gabsolue§! du vote populaire §GET§! l'État membre gagne.\n§YMandat de 3 ans§! : majorité §Gabsolue§! ET majorité §Orelative§!.\n§YMandat de 2 ans§! : majorité §Orelative§! du vote populaire §OET§! l'État membre gagne.\n§YMandat de 1 an§! : majorité §Orelative§! du vote populaire\n\nTotal des votes : [?global.POTEF_pop_vote_total|§Y0]§YK§!.\nGroupe politique : §YVote populaire§! - §CRatio du vote populaire§! - §GÉtat membre gagnant§! - §YNominé§!.\n\n[EU_POTEF_Autocratie_occidentale]\n[EU_POTEF_conservatisme]\n[EU_POTEF_libéralisme].\n[EU_POTEF_socialisme].\n[EU_POTEF_État communiste].\n[EU_POTEF_communisme_anarchiste].\n[EU_POTEF_Conservateur].\n[EU_POTEF_Autocratie].\n[UE_POTEF_Mod_Vilayat_e_Faqih].\n[UE_POTEF_Vilayat_e_Faqih].\n[EU_POTEF_Royaume].\n[EU_POTEF_Caliphate].\n[EU_POTEF_Neutral_Muslim_Brotherhood].\n[EU_POTEF_Autocratie_neutre].\n[EU_POTEF_Neutral_conservatism].\n[EU_POTEF_oligarchisme].\n[EU_POTEF_Libertaire_neutre].\n[EU_POTEF_Neutre_Vert].\n[EU_POTEF_neutre_Social].\n[EU_POTEF_Neutre_Communisme].\n[EU_POTEF_Nat_Populisme].\n[EU_POTEF_Nat_Fascisme].\n[EU_POTEF_Nat_Autocratie].\n[EU_POTEF_Monarchiste].\n"
  hide_POTEF_polls_loc_key: ""
  EU_POTEF_Western_Autocracy_loc_key: "[EU_parliament_PG_Western_Autocracy_icon] [EU_parliament_PG_Western_Autocracy_short_name]: [?global.POTEF_pop_vote^0|§Y0]§YK§! - [?global.POTEF_pop_vote_ratio^0|§C2%] - [?global.POTEF_winner^0|§G0][EU_POTEF_Western_Autocracy_nominee]\n"
