--- a/localisation/french/MD_frontend_l_french.yml
+++ b/localisation/french/MD_frontend_l_french.yml
@@ -101,8 +101,8 @@
  custom_diff_weak_kos: "@KOS Affaiblir le Kosovo"
  custom_diff_weak_che: "@CHE Affaiblir la Tchétchénie"
  custom_diff_weak_bsh: "@BSH Affaiblir le Bashkortostan"
- VERSION_MD: "Millennium Dawn : Un Monde Moderne v1.10.2"
- VERSION_MD_DATE: "Date de sortie : 11 Juillet 2024, 0h30 UTC\n11 Juillet, 8:30 PM EST"
+ VERSION_MD: "Millennium Dawn : Un Monde Moderne v1.10.3"
+ VERSION_MD_DATE: "Date de sortie : 9 août 2024, 0h30 UTC\n8 août, 8:30 PM EST"
  MENU_MD_WIKI: "Trouvez des informations utiles sur Millennium Dawn : Un Monde Moderne sur le Wiki Gitlab !"
  MENU_STEAMWORKSHOP: "Laissez-nous une évaluation sur le Steam Workshop !"
  MENU_DISCORD: "Trouvez d'autres joueurs et discutez avec les développeurs sur Discord"
@@ -170,4 +170,4 @@
  custom_diff_weak_dpr: "@DPR Affaiblir la République populaire de Donetsk"
  custom_diff_weak_lpr: "@LPR Affaiblir la République populaire de Lougansk"
  custom_diff_weak_leb: "@LEB Affaiblir le Liban"
- VERSION_MD_LOADING: "Version: v1.10.2"
+ VERSION_MD_LOADING: "Version: v1.10.3"
