--- a/localisation/french/MD_internal_factions_l_french.yml
+++ b/localisation/french/MD_internal_factions_l_french.yml
@@ -447,7 +447,7 @@
  internal_factions_events.0.o3: "Augmentons plutôt les taxes sur les entreprises !"
  internal_factions_events.0.o4: "Travailler avec les syndicats pour résoudre le problème."
  internal_factions_events.1.t: "Une start-up en passe d'être rachetée"
- internal_factions_events.1.d: "Une start-up prospère a été mise en vente récemment. Elle suscite actuellement l'intérêt d'une grande entreprise étrangère qui cherche à étendre ses activités [ROOT.GetAuEnANP] [ROOT.GetName]. Certains disent que cette acquisition devrait être empêchée, bien qu'elle aille à l'encontre des principes du marché libre."
+ internal_factions_events.1.d: "Une start-up prospère a récemment été mise en vente. Il suscite actuellement un grand intérêt de la part d’une grande entreprise étrangère cherchant à étendre ses opérations dans [ROOT.GetNameDef]. Certains estiment que cette expansion devrait être stoppée, même si empêcher l’acquisition irait à l’encontre des principes du libre marché."
  internal_factions_events.1.o1: "Laisser l'acquisition se faire."
  internal_factions_events.1.o2: "Il faut empêcher cela."
  internal_factions_events.1.o3: "L'État l'achètera en premier."
