--- a/localisation/french/MD_international_l_french.yml
+++ b/localisation/french/MD_international_l_french.yml
@@ -484,8 +484,8 @@
  pmc_rosneft_create_TT: "Créer nos propres SMP - §YRosneft PMCs§!."
  pmc_sberbank_create_TT: "Créer nos propres¨SMP - §YSber PMCs§!."
  pmc_vtb_create_TT: "Créer nos propres SMP - §YVTB PMCs§!."
- pmc_events.1.t: "[FROM.GetNameDefCap] rappell[FROM.GetEEntNP] [FROM.GetSesLeursNP] mercenaires"
- pmc_events.1.d: "Certaines de nos unités de mercenaires sont rappelées [FROM.GetAuEnANP] [FROM.GetName] suite aux ordres de leur hiérarchie. Ils fournissent une compensation pour une telle résiliation prématurée du contrat, mais rien de plus."
+ pmc_events.1.t: "[From.GetNameDef] rappelle ses mercenaires"
+ pmc_events.1.d: "Certaines de nos unités de mercenaires sont rappelées à [From.GetNameDef] en raison des ordres de leur suzerain, elles fourniront une compensation pour une telle résiliation intempestive du contrat, mais c'est tout."
  pmc_events.1.a: "Dommage."
  pmc_events.2.t: "Notre SMP a été embauchée"
  pmc_events.2.d: "Une de nos SMP à été embauchée par [From.GetLeLaLNP][FROM.GetNameWithFlag]. Nous sommes heureux que notre influence se soit également étendue sur cet État."
