--- a/localisation/french/MD_map_modes_l_french.yml
+++ b/localisation/french/MD_map_modes_l_french.yml
@@ -12,13 +12,13 @@
  MAPMODE_GDP_C_MAP_MODE_NAME: "PIB par habitant"
  MAPMODE_GDP_C_MAP_MODE: "PIB par habitant"
  MAPMODE_GDP_C_MAP_MODE_DESCRIPTION: "Ce mode de carte affiche le PIB par habitant d'une nation."
- gdp_c_map_mode_tooltip: "PIB par habitant [FROM.CONTROLLER.GetDuDelaDelNP] [FROM.CONTROLLER.GetName]"
- gdp_c_map_mode_tooltip_delayed: "Le PIB par habitant [FROM.CONTROLLER.GetDuDelaDelNP] §Y[FROM.CONTROLLER.GetName]§! est de : [?FROM.CONTROLLER:gdp_per_capita|Y]K$.\nLe mode de carte affiche le PIB par habitant d'une nation. Il s'agit d'une représentation de la taille actuelle de l'économie [FROM.CONTROLLER.GetDuDelaDelNP] [FROM.CONTROLLER.GetName]. Ce mode de carte est mis à jour chaque semaine avec le rapport économique hebdomadaire ou lorsqu'il est actualisé manuellement.\n"
+ gdp_c_map_mode_tooltip: "PIB par habitant de [FROM.CONTROLLER.GetNameWithFlag]"
+ gdp_c_map_mode_tooltip_delayed: "PIB par habitant de §Y[FROM.CONTROLLER.GetNameWithFlag]§!est : $[?FROM.CONTROLLER:gdp_per_capita|Y]K.\nLe mode carte affiche le PIB par habitant d'une nation. Il s'agit d'une représentation de la taille actuelle de l'économie [FROM.CONTROLLER.GetName]. Ce mode carte est mis à jour chaque semaine avec la coche économique hebdomadaire ou lorsqu'il est actualisé manuellement.\n"
  MAPMODE_ENERGY_CONSUMPTION_MAP_MODE_NAME: "Mode Carte Énergie"
  MAPMODE_ENERGY_CONSUMPTION_MAP_MODE: "Mode Carte Énergie"
  MAPMODE_ENERGY_CONSUMPTION_MAP_MODE_DESCRIPTION: "Ce mode de carte affiche le pourcentage actuel de la demande en énergie non satisfaite dans les pays."
- energy_consumption_map_mode_tooltip: "Non-satisfaction de la Consommation d'Énergie [FROM.CONTROLLER.GetDuDelaDelNP]  [FROM.CONTROLLER.GetNameWithFlag]"
- energy_consumption_map_mode_tooltip_delayed: "La non-satisfaction de la Consommation d'Énergie [FROM.CONTROLLER.GetDuDelaDelNP] [FROM.CONTROLLER.GetNameWithFlag] est: [?FROM.CONTROLLER:unfulfilled_energy_demand_var|%+]\n"
+ energy_consumption_map_mode_tooltip: "Non-consommation d'énergie [FROM.CONTROLLER.GetNameWithFlag]"
+ energy_consumption_map_mode_tooltip_delayed: "Le non-respect de la consommation d'énergie [FROM.CONTROLLER.GetNameWithFlag] est : [?FROM.CONTROLLER:unfulfilled_energy_demand_var|%+]\n"
  MAPMODE_PRODUCTIVITY_MAP_MODE_NAME: "Productivité"
  MAPMODE_PRODUCTIVITY_MAP_MODE: "Productivité"
  MAPMODE_PRODUCTIVITY_MAP_MODE_DESCRIPTION: "Ce mode carte affiche la productivité actuelle des différents états."
