--- a/localisation/french/MD_subparty_policies_l_french.yml
+++ b/localisation/french/MD_subparty_policies_l_french.yml
@@ -2,7 +2,7 @@
  subparty_policies_category: "La lutte idéologique"
  subparty_policies_category_desc: "Notre parti est défini par notre idéologie. Notre façon de voir le monde nous permet de l'aborder de manière unique."
  generic_initiate_5_year_plan: "Lancer le plan quinquennal"
- generic_initiate_5_year_plan_desc: "Nous avons pris notre décision sur ce que nous voulons faire pendant les 5 prochaines années. Il est temps de rassembler les travailleurs et de faire progresser le grand prolétariat [Root.GetAdjMS] !"
+ generic_initiate_5_year_plan_desc: "Nous avons pris notre décision sur ce que nous voulons faire au cours des 5 prochaines années. Il est temps d'organiser les travailleurs et d'apporter le progrès au grand [Root.GetAdjective] prolétariat !"
  generic_focus_on_civilian_sector: "Priorité au secteur civil"
  generic_focus_on_civilian_sector_desc: "Le plus grand effort devrait être mis sur la fabrication de biens de consommation de base, d'appareils électroménagers et de services publics pour le bien de notre peuple. Si nous agrandissons nos ports, nous pourrons également vendre nos produits aux capitalistes corrompus et voler l'argent de ces impérialistes."
  generic_focus_on_military_infrastructure: "Priorité à l'infrastructure militaire"
@@ -24,7 +24,7 @@
  generic_give_research_grants: "Accorder des subventions de recherche"
  generic_give_research_grants_desc: "Un grand nombre de nos entreprises nationales mènent constamment des projets de recherche. Nous devrions fournir à ces entreprises un financement public pour soutenir leurs efforts."
  generic_give_startup_subsidies: "Subventionner les start-ups"
- generic_give_startup_subsidies_desc: "[ROOT.GetNameDefCap] regorg[ROOT.GetEEntNP] de personnes ingénieuses et travailleuses, qui n'ont besoin que d'un peu d'argent pour réaliser leur rêve d'entreprendre. Nous devons aider nos concitoyens à créer ces entreprises."
+ generic_give_startup_subsidies_desc: "[ROOT.GetName] regorge de personnes ingénieuses et travailleuses, qui n'ont besoin que d'un peu d'argent pour démarrer leur rêve d'entrepreneuriat. Nous devrions aider nos concitoyens à créer ces entreprises."
  generic_give_military_procurement_funds: "Affecter des fonds supplémentaires aux achats militaires"
  generic_give_military_procurement_funds_desc: "Nous devons allouer des fonds supplémentaires au ministère de la Défense pour accélérer certains de nos projets d'acquisition."
  generic_give_ship_building_funds: "Subventionner la construction navale"
@@ -57,13 +57,13 @@
  IP_slight_corruption_pp_bonus: "Gain de poids politique de la corruption légère"
  IP_negligible_corruption_pp_bonus: "Gain de poids politique de la corruption négligeable"
  IP_emergency_powers: "Pouvoir illimité"
- IP_paramilitary_units_formed: "Garde des jeunes [ROOT.GetAdjMP]"
+ IP_paramilitary_units_formed: "[ROOT.GetAdjective] Garde de la jeunesse"
  IP_paramilitary_units_formed_desc: "Une unité paramilitaire pour les [ROOT.GetHabitants] a été créée pour les habituer à la vie militaire."
  IP_good_old_days: "Le bon vieux temps"
  IP_stable_society: "Société stable"
  IP_patriotism: "Patriotisme"
  IP_patriotism_religious: "Patriotisme"
- IP_homefront_first: "[ROOT.GetNameDefCap] d'abord !"
+ IP_homefront_first: "[ROOT.GetName] D'abord !"
  IP_welfare_state: "État providence"
  IP_peaceful_diplomacy_isolation_bonus: "Diplomatie pacifique - Isolement"
  IP_peaceful_diplomacy_local_security_bonus: "Diplomatie pacifique - Sécurité locale"
@@ -92,22 +92,22 @@
  subparty_policies.0.desc: "Grâce à une opération rapide, nous avons réussi à sécuriser les fonds d'une puissance étrangère. En gelant les avoirs à l'étranger, en confisquant du matériel et des propriétés et en transférant des instruments financiers sur des comptes gouvernementaux, nous avons considérablement augmenté la richesse de notre nation."
  subparty_policies.0.a: "Parfait."
  subparty_policies.1.t: "L'État prend le contrôle d'une usine étrangère"
- subparty_policies.1.desc: "Le dirigeant [ROOT.GetAdjMS] [ROOT.GetLeader] a annoncé aujourd'hui que les actifs d'une grande entreprise, dont le siège est situé en dehors de notre pays, seraient achetés de force par l'État. Ceci afin d'empêcher la « délocalisation éventuelle de la production industrielle à l'étranger » et de « mettre fin à l'exploitation des travailleurs [ROOT.GetAdjMP] », comme l'a déclaré notre grand leader. Pour l'entreprise en question, c'est un choc. Le PDG aurait déclaré que « c'est de la pure folie qu'un État ait autorité sur une entreprise honnête et réputée »."
+ subparty_policies.1.desc: "Le leader de [ROOT.GetAdjective] [ROOT.GetLeader] a annoncé aujourd'hui que les actifs d'une grande entreprise, dont le siège est en dehors de notre pays, seraient rachetés de force par l'État. Il s'agit d'empêcher « une éventuelle délocalisation de la production industrielle ailleurs » et de « mettre fin à l'exploitation des travailleurs [ROOT.GetAdjective] », comme l'a déclaré notre grand leader. Pour l’entreprise en question, c’est un choc. Le PDG aurait déclaré que « c'est une pure folie qu'un État ait autorité sur une entreprise honnête et réputée »."
  subparty_policies.1.a: "Parfait."
  subparty_policies.2.t: "L'État occupe une usine d'armement"
- subparty_policies.2.desc: "Tôt ce matin, la police militaire [ROOT.GetAdjFS] a pénétré sur la propriété d'une usine d'équipement militaire exploitée par une société de défense internationale. L'entreprise a été déclarée en infraction avec le droit international et est soupçonnée de fournir des armes pour les guerres capitalistes contre l'humanité. Pour cette raison, tous les biens de l'entreprise ont été confisqués par le gouvernement [Root.GetAdjMS]. Toute la production militaire de l'usine va se poursuivre immédiatement afin que nous puissions procéder à un examen approfondi de la nature inhumaine de ces armes."
+ subparty_policies.2.desc: "Tôt ce matin, la police militaire [ROOT.GetAdjective] a marché sur la propriété d'une usine d'équipement militaire exploitée par une entreprise internationale de défense. L’entreprise a été déclarée en violation du droit international et est soupçonnée de fournir des armes destinées aux guerres capitalistes contre l’humanité. Pour cette raison, tous les biens de l'entreprise ont été confisqués par le gouvernement [Root.GetAdjective]. Toute la production militaire à l’usine se poursuivra immédiatement afin que nous puissions procéder à un examen complet et approfondi du caractère inhumain de ces armes."
  subparty_policies.2.a: "Parfait."
  subparty_policies.3.t: "L'État réquisitionne un chantier naval"
- subparty_policies.3.desc: "Tôt ce matin, les garde-côtes [ROOT.GetAdjMP] ont bloqué l'entrée d'un chantier naval avec des patrouilleurs. Ce chantier naval est soupçonné d'être une façade pour des opérations de contrebande. Pour cette raison, les garde-côtes, ainsi que la marine [ROOT.GetAdjFS] ont placé la zone sous contrôle militaire. Un porte-parole de l'entreprise internationale de construction navale qui loue et exploite actuellement le chantier naval a démenti ces allégations, affirmant que les autorités [ROOT.GetAdjFP] n'ont en aucun cas été en contact avec l'entreprise."
+ subparty_policies.3.desc: "Tôt ce matin, les garde-côtes [ROOT.GetAdjective] ont bloqué l'entrée d'un chantier naval avec des patrouilleurs. Le chantier naval est soupçonné d'être une façade pour les opérations de contrebande. Pour cette raison, les garde-côtes et la marine [ROOT.GetAdjective] ont placé la zone sous contrôle militaire. Un porte-parole de l'entreprise internationale de construction navale qui loue et gère actuellement le chantier naval a nié ces allégations, affirmant que les autorités [ROOT.GetAdjective] n'avaient en aucun cas été en contact avec l'entreprise."
  subparty_policies.3.a: "Parfait."
  subparty_policies.4.t: "Échec de la nationalisation"
  subparty_policies.4.desc: "Il semble que nos plans pour nationaliser les actifs étrangers aient fuité jusqu'à notre cible. Avant que nous puissions réagir, les comptes bancaires ont été fermés et l'argent déplacé vers des comptes offshore. Il est possible que quelqu'un dans notre administration soit devenu un peu trop ami avec des puissances étrangères, ce qui a conduit à la fuite."
  subparty_policies.4.a: "Parfait."
- subparty_policies.5.t: "L'entreprise délocalise ses usines [ROOT.GetAdjFP]"
- subparty_policies.5.desc: "Il semble que nos plans de nationalisation des actifs étrangers aient été divulgués à notre cible. En raison de cela, une entreprise internationale a pris la décision rapide de déplacer l'une de ses usines de fabrication hors du pays, de peur de perdre tous ses actifs. C'est un coup dur pour l'économie [ROOT.GetAdjFS]."
+ subparty_policies.5.t: "L'entreprise délocalise ses usines de [ROOT.GetName]"
+ subparty_policies.5.desc: "Il semble que nos projets de nationalisation des actifs étrangers aient atteint notre objectif. Pour cette raison, une entreprise internationale a pris la décision précipitée de déplacer l’une de ses usines de fabrication hors du pays, craignant de perdre tous ses actifs. C'est un coup dur pour l'économie [ROOT.GetAdjective]."
  subparty_policies.5.a: "C'est terrible."
  subparty_policies.6.t: "Rachat d'une entreprise technologique"
- subparty_policies.6.desc: "Une multinationale de la technologie a annoncé aujourd'hui qu'elle était victime d'une cyberattaque massive. Dans une réponse utile, les services de renseignement [ROOT.GetAdjMP] sont arrivés sur les lieux pour apporter leur aide. Il a été conclu que l'entreprise subissait une cyberattaque de la part d'un pays hostile. Au nom de la sécurité nationale, les actifs de l'entreprise ont été placés sous le contrôle temporaire des services de renseignement."
+ subparty_policies.6.desc: "Une entreprise multinationale de technologie a annoncé aujourd’hui qu’elle était victime d’une cyberattaque massive. Dans une réponse utile, les services de renseignement [ROOT.GetAdjective] sont arrivés sur les lieux pour fournir de l'aide. Il a été conclu que l’entreprise faisait l’objet d’une cyberattaque provenant d’un pays hostile. Au nom de la sécurité nationale, les actifs de la société ont été placés temporairement sous le contrôle des services de renseignement."
  subparty_policies.6.a: "Parfait."
  IP_TITLE: "Pouvoirs idéologiques"
  IP_MAIN_BUTTON_TT_delayed: "Chaque idéologie a ses propres pouvoirs et éléments de jeu. Cliquez ici pour voir la liste complète de ces éléments, auxquels vous avez accès dès maintenant."
@@ -139,7 +139,7 @@
  IP_conservative_stable_society_delayed: "§LNotre peuple sait qu'avec nous aux commandes, rien d'inattendu ne se produira. Ils n'ont rien à craindre et ils peuvent nous accorder toute leur confiance.§!"
  IP_conservative_patriotism: "§YPatriotisme§!\nSoutien à la guerre : §G+15.00%§!\n\nSi dirigé par le [Mod_Vilayat_e_Faqih_L] ou le [Neutral_Muslim_Brotherhood_L], ce bonus est remplacé par :\nVitesse de croissance de l'accommmodement : §G+15%§!"
  IP_conservative_patriotism_delayed: "§LNous sommes tous de la même trempe. Nous devons encourager des idéaux et des valeurs communs à notre peuple afin qu'il soit prêt à donner le meilleur de lui-même à l'État.§!"
- IP_conservative_homefront_first: "§Y[ROOT.GetNameDefCap] d'abord !§!\nMultiplicateur de l'§Yinfluence étrangère§! : §R-15.00%§!"
+ IP_conservative_homefront_first: "§Y[ROOT.GetName] d'abord !§!\nMultiplicateur de l'§Yinfluence étrangère§! : §R-15.00%§!"
  IP_conservative_homefront_first_delayed: "§LNos partisans attendent de nous que nous fassions passer notre propre pays en premier. Il est donc difficile d'envoyer de l'aide à l'étranger et de s'immiscer dans la politique d'un autre pays. À moins, bien sûr, que nous devions aller à la guerre, nos partisans adorent ça. Si vous gagnez, cela signifie clairement que vous êtes le premier.§!"
  IP_socialist_category_desc: "§YSocialistes§!\nPouvoirs disponibles pour :\n[socialism_L]\n[anarchist_communism_L]\n[Neutral_green_L]\n[neutral_Social_L]"
  IP_socialist_category_delayed: "§LLes socialistes combinent des éléments du capitalisme de marché et d'État avec le progressisme. Très souvent, l'objectif est d'investir tous les efforts du gouvernement dans le pays lui-même. Les socialistes n'ont aucun mal à améliorer la situation interne de leur pays grâce à des politiques d'aide sociale et à l'intervention du gouvernement dans l'économie.§!"
@@ -168,7 +168,7 @@
  IP_monarchist_for_king_and_queen: "§YPour le Roi et la Reine§!\nDéfense des unités sur le territoire national : §G+10.0%§!\nAttaque des unités sur le territoire national : §G+10.0%§!"
  IP_monarchist_for_king_and_queen_delayed: "§L[IP_monarch_name] inspire notre peuple et nos soldats à se battre même lorsque la situation est désespérée. Ceux qui en sont dignes seront récompensés, que ce soit sur Terre ou au Ciel.§!"
  IP_monarchist_crown_estate: "§YDomaine de la Couronne§!\nRevenu fiscal de la population : §G+10%§!"
- IP_monarchist_crown_estate_delayed: "§LLa famille royale détient beaucoup de terres [ROOT.GetAuEnANP] [ROOT.GetName]. L'utilisation de ces terres apporte des gains monétaires massifs à l'État et, peut-être, dans les poches de [IP_monarch_name].§!"
+ IP_monarchist_crown_estate_delayed: "§LLa famille royale possède de nombreuses terres dans [ROOT.GetName]. L'utilisation de ces terres apporte des gains monétaires massifs à l'État, et peut-être dans les poches de [IP_monarch_name].§!"
  IP_monarchist_outdated_ideals: "§YIdéaux dépassés§!\nStabilité : §R-15.00%§!"
  IP_monarchist_outdated_ideals_delayed: "§LLa monarchie n'est pas exactement la dernière mode en matière de gouvernement. De nos jours, les gens aspirent à d'autres options que la monarchie absolue. Il faudrait être danois ou quelque chose comme ça pour penser que les monarchies sont toujours cool.§!"
  IP_fundamentalist_symbol_desc: "§YFondamentalistes§!\nPouvoirs disponibles pour :\n[Vilayat_e_Faqih_L]\n[Caliphate_L]"
