--- a/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
+++ b/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
@@ -1406,7 +1406,7 @@
  MNT_eyes_on_west_desc: "Współpraca z bogatymi i rozwiniętymi krajami zachodnimi jest konieczna, aby budować silne korzenie handlowe, pomimo wszystkich złych rzeczy, które NATO sprowadziło na naszą ziemię."
  MNT_american_inv: "Zaproś amerykańskich inwestorów"
  MNT_american_inv_desc: "Współpraca z amerykańskimi inwestorami z sektora przemysłowego mogłaby korzystnie wpłynąć na wzrost naszego PKB i współpracę transkontynentalną."
- MNT_german_inv: "Silny i gotowy"
+ MNT_german_inv: "Invite German Investors"
  MNT_german_inv_desc: "Współpraca z niemieckimi inwestorami z sektora przemysłowego mogłaby być korzystna dla wzrostu naszego PKB i dla naszej przyszłej ewentualnej integracji z UE."
  MNT_european_trade: "Europejska umowa handlowa"
  MNT_european_trade_desc: "Nie można argumentować, że Czarnogóra jest krajem europejskim i nie możemy ignorować faktu, że handel z UE jest nam niezbędny. Nasza bogata kraina mogłaby zapewnić wszystko zwykłym Europejczykom."
@@ -1441,7 +1441,7 @@
  MNT_eu_model: "Wdrożyć model europejski"
  MNT_eu_model_desc: "Aby zostać przyjętym do UE, musimy wdrożyć postępowe reformy i przyjąć europejskie standardy struktury rządów. To będzie długi proces, ale wierzymy w siebie!."
  MNT_nato_aspiration: "Dołącz do NATO"
- MNT_nato_aspiration_desc: "Aby nie bać się zagrożeń zewnętrznych i mieć pewność, że naszej demokracji nie stanie się krzywda, musimy przystąpić do organizacji NAYO."
+ MNT_nato_aspiration_desc: "To not be afraid of any external threats and to be sure that our democracy won't be harmed, we must join the NATO organization."
  MNT_independent_politics: "Polityka Czarnogóry"
  MNT_independent_politics_desc: "Po długiej okupacji przez jugosłowiańskich komunistów Czarnogóra ponownie uzyskała niepodległość, zgodnie z wolą naszego narodu! Teraz czas na zmiany polityczne!"
  MNT_organised_crime: "Przestępczość zorganizowana"
