--- a/localisation/simp_chinese/MD_focus_African_Union_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_African_Union_l_simp_chinese.yml
@@ -121,7 +121,7 @@
  AFRICAN_UNION_shared_focus_form_defence_council: "组建国防委员会"
  AFRICAN_UNION_shared_focus_form_defence_council_desc: "为了加强非洲大陆的稳定，我们应该成立一个非盟共同防御委员会。该委员会将负责组织欧洲大陆的联合军事行动。"
  AFRICAN_UNION_shared_focus_form_defence_council_tt: "§Y$african_union_reforms_modifier$§!追加效果\n$MODIFIER_SEND_VOLUNTEERS_TENSION_LIMIT$: [?african_union_send_volunteers_tension_temp|=-%]\n$MODIFIER_SEND_VOLUNTEER_SIZE$: [?african_union_send_volunteer_size_temp|=+0]"
- AFRICAN_UNION_shared_focus_create_african_space_agency: "到目前为止，非洲国家在卫星领域的合作有限。最著名的是 45 个国家组成的非洲区域卫星通信组织，尽管它们只成功发射了一两颗卫星。我们需要创建一个共同的合资企业来创建非洲卫星网络。"
+ AFRICAN_UNION_shared_focus_create_african_space_agency: "建立非洲空间局"
  AFRICAN_UNION_shared_focus_create_african_space_agency_tt: "§Y$african_union_reforms_modifier$§!追加效果\n$olv_production_speed_modifier$: [?african_union_satellite_speed_modifier_temp|=+%]\n$gnss_production_speed_modifier$: [?african_union_satellite_speed_modifier_temp|=+%]\n$comsat_production_speed_modifier$: [?african_union_satellite_speed_modifier_temp|=+%]\n$spysat_production_speed_modifier$: [?african_union_satellite_speed_modifier_temp|=+%]"
  AFRICAN_UNION_shared_focus_include_african_diaspora: "包括非洲侨民"
  AFRICAN_UNION_shared_focus_include_african_diaspora_desc: "大约有1.5亿人生活在非洲之外，他们的血统可以追溯到非洲大陆。非洲联盟目前分为5个地区。我们应该为非洲侨民创建一个额外的地区，正式承认他们是一个政治实体。这样我们就可以鼓励他们中的一些人与我们分享非洲统一的梦想。"
@@ -353,3 +353,4 @@
  TT_IF_THEY_ACCEPT: "如果他们接受，那么\n"
  african_union_peacekeeping_effort: "非洲联盟：维和行动"
  african_union_peacekeeping_effort_desc: "非洲联盟成员国同意集中精力结束非洲各地发生的各类武装冲突。"
+ AFRICAN_UNION_shared_focus_create_african_space_agency_desc: "到目前为止，非洲国家在卫星领域的合作有限。最著名的是 45 个国家组成的非洲区域卫星通信组织，尽管它们只成功发射了一两颗卫星。我们需要创建一个共同的合资企业来创建非洲卫星网络。"
